@@ -17,42 +17,45 @@
 
 package org.apache.kafka.connect.rest.basic.auth.extension;
 
+import org.apache.kafka.common.config.ConfigException;
+import org.apache.kafka.connect.errors.ConnectException;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.nio.charset.StandardCharsets;
+import java.security.Principal;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Base64;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import javax.security.auth.login.Configuration;
-import javax.ws.rs.HttpMethod;
-import org.apache.kafka.common.config.ConfigException;
-import org.apache.kafka.connect.errors.ConnectException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
-
+import javax.annotation.Priority;
 import javax.security.auth.callback.Callback;
 import javax.security.auth.callback.CallbackHandler;
 import javax.security.auth.callback.NameCallback;
 import javax.security.auth.callback.PasswordCallback;
-import javax.security.auth.callback.UnsupportedCallbackException;
+import javax.security.auth.login.Configuration;
 import javax.security.auth.login.LoginContext;
 import javax.security.auth.login.LoginException;
-import javax.ws.rs.container.ContainerRequestContext;
-import javax.ws.rs.container.ContainerRequestFilter;
-import javax.ws.rs.core.Response;
 
+import jakarta.ws.rs.HttpMethod;
+import jakarta.ws.rs.Priorities;
+import jakarta.ws.rs.container.ContainerRequestContext;
+import jakarta.ws.rs.container.ContainerRequestFilter;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.SecurityContext;
+
+@Priority(Priorities.AUTHENTICATION)
 public class JaasBasicAuthFilter implements ContainerRequestFilter {
 
     private static final Logger log = LoggerFactory.getLogger(JaasBasicAuthFilter.class);
-    private static final Set<RequestMatcher> INTERNAL_REQUEST_MATCHERS = new HashSet<>(Arrays.asList(
+    private static final Set<RequestMatcher> INTERNAL_REQUEST_MATCHERS = Set.of(
             new RequestMatcher(HttpMethod.POST, "/?connectors/([^/]+)/tasks/?"),
             new RequestMatcher(HttpMethod.PUT, "/?connectors/[^/]+/fence/?")
-    ));
+    );
     private static final String CONNECT_LOGIN_MODULE = "KafkaConnect";
 
     static final String AUTHORIZATION = "Authorization";
@@ -81,7 +84,7 @@ public class JaasBasicAuthFilter implements ContainerRequestFilter {
     }
 
     @Override
-    public void filter(ContainerRequestContext requestContext) throws IOException {
+    public void filter(ContainerRequestContext requestContext) {
         if (isInternalRequest(requestContext)) {
             log.trace("Skipping authentication for internal request");
             return;
@@ -89,12 +92,14 @@ public class JaasBasicAuthFilter implements ContainerRequestFilter {
 
         try {
             log.debug("Authenticating request");
+            BasicAuthCredentials credentials = new BasicAuthCredentials(requestContext.getHeaderString(AUTHORIZATION));
             LoginContext loginContext = new LoginContext(
                 CONNECT_LOGIN_MODULE,
                 null,
-                new BasicAuthCallBackHandler(requestContext.getHeaderString(AUTHORIZATION)),
+                new BasicAuthCallBackHandler(credentials),
                 configuration);
             loginContext.login();
+            setSecurityContextForRequest(requestContext, credentials);
         } catch (LoginException | ConfigException e) {
             // Log at debug here in order to avoid polluting log files whenever someone mistypes their credentials
             log.debug("Request failed authentication", e);
@@ -111,45 +116,16 @@ public class JaasBasicAuthFilter implements ContainerRequestFilter {
 
     public static class BasicAuthCallBackHandler implements CallbackHandler {
 
-        private static final String BASIC = "basic";
-        private static final char COLON = ':';
-        private static final char SPACE = ' ';
-        private String username;
-        private String password;
+        private final String username;
+        private final String password;
 
-        public BasicAuthCallBackHandler(String credentials) {
-            if (credentials == null) {
-                log.trace("No credentials were provided with the request");
-                return;
-            }
-
-            int space = credentials.indexOf(SPACE);
-            if (space <= 0) {
-                log.trace("Request credentials were malformed; no space present in value for authorization header");
-                return;
-            }
-
-            String method = credentials.substring(0, space);
-            if (!BASIC.equalsIgnoreCase(method)) {
-                log.trace("Request credentials used {} authentication, but only {} supported; ignoring", method, BASIC);
-                return;
-            }
-
-            credentials = credentials.substring(space + 1);
-            credentials = new String(Base64.getDecoder().decode(credentials),
-                                     StandardCharsets.UTF_8);
-            int i = credentials.indexOf(COLON);
-            if (i <= 0) {
-                log.trace("Request credentials were malformed; no colon present between username and password");
-                return;
-            }
-
-            username = credentials.substring(0, i);
-            password = credentials.substring(i + 1);
+        public BasicAuthCallBackHandler(BasicAuthCredentials credentials) {
+            username = credentials.username();
+            password = credentials.password();
         }
 
         @Override
-        public void handle(Callback[] callbacks) throws UnsupportedCallbackException {
+        public void handle(Callback[] callbacks) {
             List<Callback> unsupportedCallbacks = new ArrayList<>();
             for (Callback callback : callbacks) {
                 if (callback instanceof NameCallback) {
@@ -172,6 +148,76 @@ public class JaasBasicAuthFilter implements ContainerRequestFilter {
                     unsupportedCallbacks,
                     BasicAuthSecurityRestExtension.class.getSimpleName()
                 ));
+        }
+    }
+
+    private void setSecurityContextForRequest(ContainerRequestContext requestContext, BasicAuthCredentials credential) {
+        requestContext.setSecurityContext(new SecurityContext() {
+            @Override
+            public Principal getUserPrincipal() {
+                return credential::username;
+            }
+
+            @Override
+            public boolean isUserInRole(String role) {
+                return false;
+            }
+
+            @Override
+            public boolean isSecure() {
+                return  "https".equalsIgnoreCase(requestContext.getUriInfo().getRequestUri().getScheme());
+            }
+
+            @Override
+            public String getAuthenticationScheme() {
+                return BASIC_AUTH;
+            }
+        });
+    }
+
+    // Visible for testing
+    static class BasicAuthCredentials {
+        private String username;
+        private String password;
+
+        public BasicAuthCredentials(String authorizationHeader) {
+
+            if (authorizationHeader == null) {
+                log.trace("No credentials were provided with the request");
+                return;
+            }
+
+            int spaceIndex = authorizationHeader.indexOf(' ');
+            if (spaceIndex <= 0) {
+                log.trace("Request credentials were malformed; no space present in value for authorization header");
+                return;
+            }
+
+            String method = authorizationHeader.substring(0, spaceIndex);
+            if (!SecurityContext.BASIC_AUTH.equalsIgnoreCase(method)) {
+                log.trace("Request credentials used {} authentication, but only {} supported; ignoring", method, SecurityContext.BASIC_AUTH);
+                return;
+            }
+
+            authorizationHeader = authorizationHeader.substring(spaceIndex + 1);
+            authorizationHeader = new String(Base64.getDecoder().decode(authorizationHeader),
+                    StandardCharsets.UTF_8);
+            int i = authorizationHeader.indexOf(':');
+            if (i <= 0) {
+                log.trace("Request credentials were malformed; no colon present between username and password");
+                return;
+            }
+
+            this.username = authorizationHeader.substring(0, i);
+            this.password = authorizationHeader.substring(i + 1);
+        }
+
+        public String username() {
+            return username;
+        }
+
+        public String password() {
+            return password;
         }
     }
 }
