@@ -16,11 +16,7 @@
  */
 package org.apache.kafka.connect.json;
 
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.JsonNodeFactory;
+import org.apache.kafka.common.utils.AppInfoParser;
 import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.connect.data.Date;
 import org.apache.kafka.connect.data.Decimal;
@@ -31,8 +27,17 @@ import org.apache.kafka.connect.data.Struct;
 import org.apache.kafka.connect.data.Time;
 import org.apache.kafka.connect.data.Timestamp;
 import org.apache.kafka.connect.errors.DataException;
+
+import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.JsonNodeFactory;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 import java.io.File;
 import java.io.IOException;
@@ -41,13 +46,13 @@ import java.math.BigInteger;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.ByteBuffer;
-import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.GregorianCalendar;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.TimeZone;
 
@@ -64,13 +69,13 @@ public class JsonConverterTest {
 
     private final ObjectMapper objectMapper = new ObjectMapper()
         .enable(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS)
-        .setNodeFactory(JsonNodeFactory.withExactBigDecimals(true));
+        .setNodeFactory(new JsonNodeFactory(true));
 
     private final JsonConverter converter = new JsonConverter();
 
     @BeforeEach
     public void setUp() {
-        converter.configure(Collections.emptyMap(), false);
+        converter.configure(Map.of(), false);
     }
 
     // Schema metadata
@@ -116,6 +121,14 @@ public class JsonConverterTest {
     }
 
     @Test
+    public void numberWithLeadingZerosToConnect() {
+        assertEquals(new SchemaAndValue(Schema.INT8_SCHEMA, (byte) 12), converter.toConnectData(TOPIC, "{ \"schema\": { \"type\": \"int8\" }, \"payload\": 0012 }".getBytes()));
+        assertEquals(new SchemaAndValue(Schema.INT16_SCHEMA, (short) 123), converter.toConnectData(TOPIC, "{ \"schema\": { \"type\": \"int16\" }, \"payload\": 000123 }".getBytes()));
+        assertEquals(new SchemaAndValue(Schema.INT32_SCHEMA, 12345), converter.toConnectData(TOPIC, "{ \"schema\": { \"type\": \"int32\" }, \"payload\": 000012345 }".getBytes()));
+        assertEquals(new SchemaAndValue(Schema.INT64_SCHEMA, 123456789L), converter.toConnectData(TOPIC, "{ \"schema\": { \"type\": \"int64\" }, \"payload\": 00000123456789 }".getBytes()));
+    }
+
+    @Test
     public void floatToConnect() {
         assertEquals(new SchemaAndValue(Schema.FLOAT32_SCHEMA, 12.34f), converter.toConnectData(TOPIC, "{ \"schema\": { \"type\": \"float\" }, \"payload\": 12.34 }".getBytes()));
     }
@@ -143,7 +156,7 @@ public class JsonConverterTest {
     @Test
     public void arrayToConnect() {
         byte[] arrayJson = "{ \"schema\": { \"type\": \"array\", \"items\": { \"type\" : \"int32\" } }, \"payload\": [1, 2, 3] }".getBytes();
-        assertEquals(new SchemaAndValue(SchemaBuilder.array(Schema.INT32_SCHEMA).build(), Arrays.asList(1, 2, 3)), converter.toConnectData(TOPIC, arrayJson));
+        assertEquals(new SchemaAndValue(SchemaBuilder.array(Schema.INT32_SCHEMA).build(), List.of(1, 2, 3)), converter.toConnectData(TOPIC, arrayJson));
     }
 
     @Test
@@ -199,7 +212,7 @@ public class JsonConverterTest {
     @Test
     public void emptyBytesToConnect() {
         // This characterizes the messages with empty data when Json schemas is disabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         SchemaAndValue converted = converter.toConnectData(TOPIC, "".getBytes());
         assertEquals(SchemaAndValue.NULL, converted);
@@ -211,7 +224,7 @@ public class JsonConverterTest {
     @Test
     public void schemalessWithEmptyFieldValueToConnect() {
         // This characterizes the messages with empty data when Json schemas is disabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         String input = "{ \"a\": \"\", \"b\": null}";
         SchemaAndValue converted = converter.toConnectData(TOPIC, input.getBytes());
@@ -242,7 +255,7 @@ public class JsonConverterTest {
         assertEquals(new SchemaAndValue(null, "a string"), converted);
 
         converted = converter.toConnectData(TOPIC, "{ \"schema\": null, \"payload\": [1, \"2\", 3] }".getBytes());
-        assertEquals(new SchemaAndValue(null, Arrays.asList(1L, "2", 3L)), converted);
+        assertEquals(new SchemaAndValue(null, List.of(1L, "2", 3L)), converted);
 
         converted = converter.toConnectData(TOPIC, "{ \"schema\": null, \"payload\": { \"field1\": 1, \"field2\": 2} }".getBytes());
         Map<String, Long> obj = new HashMap<>();
@@ -575,7 +588,7 @@ public class JsonConverterTest {
     @Test
     public void arrayToJson() {
         Schema int32Array = SchemaBuilder.array(Schema.INT32_SCHEMA).build();
-        JsonNode converted = parse(converter.fromConnectData(TOPIC, int32Array, Arrays.asList(1, 2, 3)));
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, int32Array, List.of(1, 2, 3)));
         validateEnvelope(converted);
         assertEquals(parse("{ \"type\": \"array\", \"items\": { \"type\": \"int32\", \"optional\": false }, \"optional\": false }"),
                 converted.get(JsonSchema.ENVELOPE_SCHEMA_FIELD_NAME));
@@ -614,8 +627,8 @@ public class JsonConverterTest {
         Set<JsonNode> payloadEntries = new HashSet<>();
         for (JsonNode elem : payload)
             payloadEntries.add(elem);
-        assertEquals(new HashSet<>(Arrays.asList(JsonNodeFactory.instance.arrayNode().add(1).add(12),
-                        JsonNodeFactory.instance.arrayNode().add(2).add(15))),
+        assertEquals(Set.of(JsonNodeFactory.instance.arrayNode().add(1).add(12),
+                        JsonNodeFactory.instance.arrayNode().add(2).add(15)),
                 payloadEntries
         );
     }
@@ -663,7 +676,7 @@ public class JsonConverterTest {
 
     @Test
     public void decimalToNumericJson() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
+        converter.configure(Map.of(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
         JsonNode converted = parse(converter.fromConnectData(TOPIC, Decimal.schema(2), new BigDecimal(new BigInteger("156"), 2)));
         validateEnvelope(converted);
         assertEquals(parse("{ \"type\": \"bytes\", \"optional\": false, \"name\": \"org.apache.kafka.connect.data.Decimal\", \"version\": 1, \"parameters\": { \"scale\": \"2\" } }"),
@@ -674,7 +687,7 @@ public class JsonConverterTest {
 
     @Test
     public void decimalWithTrailingZerosToNumericJson() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
+        converter.configure(Map.of(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
         JsonNode converted = parse(converter.fromConnectData(TOPIC, Decimal.schema(4), new BigDecimal(new BigInteger("15600"), 4)));
         validateEnvelope(converted);
         assertEquals(parse("{ \"type\": \"bytes\", \"optional\": false, \"name\": \"org.apache.kafka.connect.data.Decimal\", \"version\": 1, \"parameters\": { \"scale\": \"4\" } }"),
@@ -754,7 +767,7 @@ public class JsonConverterTest {
     public void nullSchemaAndArrayToJson() {
         // This still needs to do conversion of data, null schema means "anything goes". Make sure we mix and match
         // types to verify conversion still works.
-        JsonNode converted = parse(converter.fromConnectData(TOPIC, null, Arrays.asList(1, "string", true)));
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, null, List.of(1, "string", true)));
         validateEnvelopeNullSchema(converted);
         assertTrue(converted.get(JsonSchema.ENVELOPE_SCHEMA_FIELD_NAME).isNull());
         assertEquals(JsonNodeFactory.instance.arrayNode().add(1).add("string").add(true),
@@ -793,9 +806,9 @@ public class JsonConverterTest {
         Set<JsonNode> payloadEntries = new HashSet<>();
         for (JsonNode elem : payload)
             payloadEntries.add(elem);
-        assertEquals(new HashSet<>(Arrays.asList(JsonNodeFactory.instance.arrayNode().add("string").add(12),
+        assertEquals(Set.of(JsonNodeFactory.instance.arrayNode().add("string").add(12),
                         JsonNodeFactory.instance.arrayNode().add(52).add("string"),
-                        JsonNodeFactory.instance.arrayNode().add(false).add(true))),
+                        JsonNodeFactory.instance.arrayNode().add(false).add(true)),
                 payloadEntries
         );
     }
@@ -803,7 +816,7 @@ public class JsonConverterTest {
     @Test
     public void nullSchemaAndNullValueToJson() {
         // This characterizes the production of tombstone messages when Json schemas is enabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", true);
+        Map<String, Boolean> props = Map.of("schemas.enable", true);
         converter.configure(props, true);
         byte[] converted = converter.fromConnectData(TOPIC, null, null);
         assertNull(converted);
@@ -812,7 +825,7 @@ public class JsonConverterTest {
     @Test
     public void nullValueToJson() {
         // This characterizes the production of tombstone messages when Json schemas is not enabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         byte[] converted = converter.fromConnectData(TOPIC, null, null);
         assertNull(converted);
@@ -827,14 +840,14 @@ public class JsonConverterTest {
 
     @Test
     public void noSchemaToConnect() {
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         assertEquals(new SchemaAndValue(null, true), converter.toConnectData(TOPIC, "true".getBytes()));
     }
 
     @Test
     public void noSchemaToJson() {
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         JsonNode converted = parse(converter.fromConnectData(TOPIC, null, true));
         assertTrue(converted.isBoolean());
@@ -860,11 +873,11 @@ public class JsonConverterTest {
 
     @Test
     public void testJsonSchemaCacheSizeFromConfigFile() throws URISyntaxException, IOException {
-        URL url = getClass().getResource("/connect-test.properties");
+        URL url = Objects.requireNonNull(getClass().getResource("/connect-test.properties"));
         File propFile = new File(url.toURI());
         String workerPropsFile = propFile.getAbsolutePath();
         Map<String, String> workerProps = !workerPropsFile.isEmpty() ?
-                Utils.propsToStringMap(Utils.loadProps(workerPropsFile)) : Collections.emptyMap();
+                Utils.propsToStringMap(Utils.loadProps(workerPropsFile)) : Map.of();
 
         JsonConverter rc = new JsonConverter();
         rc.configure(workerProps, false);
@@ -887,6 +900,136 @@ public class JsonConverterTest {
         assertEquals(new SchemaAndValue(Schema.STRING_SCHEMA, "foo-bar-baz"), converter.toConnectHeader(TOPIC, "headerName", "{ \"schema\": { \"type\": \"string\" }, \"payload\": \"foo-bar-baz\" }".getBytes()));
     }
 
+    @Test
+    public void serializeNullToDefault() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, schema, null));
+        JsonNode expected = parse("{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":\"default\"}");
+        assertEquals(expected, converted);
+    }
+
+    @Test
+    public void serializeNullToNull() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, schema, null));
+        JsonNode expected = parse("{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":null}");
+        assertEquals(expected, converted);
+    }
+
+    @Test
+    public void deserializeNullToDefault() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        String value = "{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":null}";
+        SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
+        assertEquals("default", sav.value());
+    }
+
+    @Test
+    public void deserializeNullToNull() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        String value = "{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":null}";
+        SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
+        assertNull(sav.value());
+    }
+
+    @Test
+    public void serializeFieldNullToDefault() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
+        Schema structSchema = SchemaBuilder.struct().field("field1", schema).build();
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, structSchema, new Struct(structSchema)));
+        JsonNode expected = parse("{\"schema\":{\"type\":\"struct\",\"fields\":[{\"field\":\"field1\",\"type\":\"string\",\"optional\":true,\"default\":\"default\"}],\"optional\":false},\"payload\":{\"field1\":\"default\"}}");
+        assertEquals(expected, converted);
+    }
+
+    @Test
+    public void serializeFieldNullToNull() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
+        Schema structSchema = SchemaBuilder.struct().field("field1", schema).build();
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, structSchema, new Struct(structSchema)));
+        JsonNode expected = parse("{\"schema\":{\"type\":\"struct\",\"fields\":[{\"field\":\"field1\",\"type\":\"string\",\"optional\":true,\"default\":\"default\"}],\"optional\":false},\"payload\":{\"field1\":null}}");
+        assertEquals(expected, converted);
+    }
+
+    @Test
+    public void deserializeFieldNullToDefault() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        String value = "{\"schema\":{\"type\":\"struct\",\"fields\":[{\"field\":\"field1\",\"type\":\"string\",\"optional\":true,\"default\":\"default\"}],\"optional\":false},\"payload\":{\"field1\":null}}";
+        SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
+        Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
+        Schema structSchema = SchemaBuilder.struct().field("field1", schema).build();
+        assertEquals(new Struct(structSchema).put("field1", "default"), sav.value());
+    }
+
+    @Test
+    public void deserializeFieldNullToNull() {
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        String value = "{\"schema\":{\"type\":\"struct\",\"fields\":[{\"field\":\"field1\",\"type\":\"string\",\"optional\":true,\"default\":\"default\"}],\"optional\":false},\"payload\":{\"field1\":null}}";
+        SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
+        Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
+        Schema structSchema = SchemaBuilder.struct().field("field1", schema).build();
+        assertEquals(new Struct(structSchema), sav.value());
+    }
+
+    @Test
+    public void testVersionRetrievedFromAppInfoParser() {
+        assertEquals(AppInfoParser.getVersion(), converter.version());
+    }
+
+    @Test
+    public void testSchemaContentIsNull() {
+        Map<String, Object> config = new HashMap<>();
+        config.put(JsonConverterConfig.SCHEMA_CONTENT_CONFIG, null);
+        converter.configure(config, false);
+        byte[] jsonBytes = "{ \"schema\": { \"type\": \"string\" }, \"payload\": \"foo-bar-baz\" }".getBytes();
+        SchemaAndValue result = converter.toConnectData(TOPIC, jsonBytes);
+        assertEquals(new SchemaAndValue(Schema.STRING_SCHEMA, "foo-bar-baz"), result);
+    }
+
+    @Test
+    public void testSchemaContentIsEmptyString() {
+        converter.configure(Map.of(JsonConverterConfig.SCHEMA_CONTENT_CONFIG, ""), false);
+        assertEquals(new SchemaAndValue(Schema.STRING_SCHEMA, "foo-bar-baz"), converter.toConnectData(TOPIC, "{ \"schema\": { \"type\": \"string\" }, \"payload\": \"foo-bar-baz\" }".getBytes()));
+    }
+
+    @Test
+    public void testSchemaContentValidSchema() {
+        converter.configure(Map.of(JsonConverterConfig.SCHEMA_CONTENT_CONFIG, "{ \"type\": \"string\" }"), false);
+        assertEquals(new SchemaAndValue(Schema.STRING_SCHEMA, "foo-bar-baz"), converter.toConnectData(TOPIC, "\"foo-bar-baz\"".getBytes()));
+    }
+
+    @Test
+    public void testSchemaContentInValidSchema() {
+        assertThrows(
+            DataException.class,
+            () -> converter.configure(Map.of(JsonConverterConfig.SCHEMA_CONTENT_CONFIG, "{ \"string\" }"), false),
+            " Provided schema is invalid , please recheck the schema you have provided");
+    }
+
+    @Test
+    public void testSchemaContentLooksLikeSchema() {
+        converter.configure(Map.of(JsonConverterConfig.SCHEMA_CONTENT_CONFIG, "{ \"type\": \"struct\", \"fields\": [{\"field\": \"schema\", \"type\": \"struct\",\"fields\": [{\"field\": \"type\", \"type\": \"string\" }]}, {\"field\": \"payload\", \"type\": \"string\"}]}"), false);
+        SchemaAndValue connectData = converter.toConnectData(TOPIC, "{ \"schema\": { \"type\": \"string\" }, \"payload\": \"foo-bar-baz\" }".getBytes());
+        assertEquals("foo-bar-baz", ((Struct) connectData.value()).getString("payload"));
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {
+        "{ }",
+        "{ \"wrong\": \"schema\" }",
+        "{ \"schema\": { \"type\": \"string\" } }",
+        "{ \"payload\": \"foo-bar-baz\" }",
+        "{ \"schema\": { \"type\": \"string\" }, \"payload\": \"foo-bar-baz\", \"extra\": \"field\" }",
+    })
+    public void testNullSchemaContentWithWrongConnectDataValue(String value) {
+        converter.configure(Map.of(), false);
+        assertThrows(
+                DataException.class,
+                () -> converter.toConnectData(TOPIC, value.getBytes()));
+    }
 
     private JsonNode parse(byte[] json) {
         try {
