@@ -16,31 +16,30 @@
  */
 package org.apache.kafka.connect.runtime;
 
-import org.apache.kafka.clients.admin.NewTopic;
-import org.apache.kafka.clients.producer.KafkaProducer;
-import org.apache.kafka.clients.producer.ProducerRecord;
+import org.apache.kafka.clients.producer.Producer;
 import org.apache.kafka.clients.producer.RecordMetadata;
 import org.apache.kafka.common.KafkaException;
+import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.errors.InvalidTopicException;
 import org.apache.kafka.common.errors.RecordTooLargeException;
-import org.apache.kafka.common.errors.TopicAuthorizationException;
 import org.apache.kafka.common.header.Header;
 import org.apache.kafka.common.header.Headers;
 import org.apache.kafka.common.header.internals.RecordHeaders;
+import org.apache.kafka.common.internals.Plugin;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.errors.ConnectException;
-import org.apache.kafka.connect.integration.MonitorableSourceConnector;
+import org.apache.kafka.connect.integration.TestableSourceConnector;
 import org.apache.kafka.connect.runtime.ConnectMetrics.MetricGroup;
 import org.apache.kafka.connect.runtime.errors.ErrorHandlingMetrics;
 import org.apache.kafka.connect.runtime.errors.RetryWithToleranceOperatorTest;
 import org.apache.kafka.connect.runtime.isolation.Plugins;
+import org.apache.kafka.connect.runtime.isolation.TestPlugins;
 import org.apache.kafka.connect.runtime.standalone.StandaloneConfig;
 import org.apache.kafka.connect.source.SourceRecord;
 import org.apache.kafka.connect.source.SourceTask;
-import org.apache.kafka.connect.source.SourceTaskContext;
 import org.apache.kafka.connect.source.TransactionContext;
 import org.apache.kafka.connect.storage.CloseableOffsetStorageReader;
 import org.apache.kafka.connect.storage.ClusterConfigState;
@@ -50,44 +49,40 @@ import org.apache.kafka.connect.storage.HeaderConverter;
 import org.apache.kafka.connect.storage.OffsetStorageWriter;
 import org.apache.kafka.connect.storage.StatusBackingStore;
 import org.apache.kafka.connect.storage.StringConverter;
+import org.apache.kafka.connect.test.util.ConcurrencyUtils;
+import org.apache.kafka.connect.test.util.MockitoUtils;
 import org.apache.kafka.connect.util.Callback;
 import org.apache.kafka.connect.util.ConnectorTaskId;
-import org.apache.kafka.connect.util.ParameterizedTest;
 import org.apache.kafka.connect.util.TopicAdmin;
 import org.apache.kafka.connect.util.TopicCreationGroup;
-import org.easymock.Capture;
-import org.easymock.EasyMock;
-import org.easymock.IAnswer;
-import org.easymock.IExpectationSetters;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.powermock.api.easymock.PowerMock;
-import org.powermock.api.easymock.annotation.Mock;
-import org.powermock.api.easymock.annotation.MockStrict;
-import org.powermock.core.classloader.annotations.PowerMockIgnore;
-import org.powermock.modules.junit4.PowerMockRunner;
-import org.powermock.modules.junit4.PowerMockRunnerDelegate;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.mockito.stubbing.OngoingStubbing;
+import org.mockito.verification.VerificationMode;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
-import static org.apache.kafka.connect.integration.MonitorableSourceConnector.TOPIC_CONFIG;
+import static org.apache.kafka.connect.integration.TestableSourceConnector.TOPIC_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.CONNECTOR_CLASS_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.KEY_CONVERTER_CLASS_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.TASKS_MAX_CONFIG;
@@ -101,26 +96,35 @@ import static org.apache.kafka.connect.runtime.TopicCreationConfig.INCLUDE_REGEX
 import static org.apache.kafka.connect.runtime.TopicCreationConfig.PARTITIONS_CONFIG;
 import static org.apache.kafka.connect.runtime.TopicCreationConfig.REPLICATION_FACTOR_CONFIG;
 import static org.apache.kafka.connect.runtime.WorkerConfig.TOPIC_CREATION_ENABLE_CONFIG;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.atLeast;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
-@PowerMockIgnore({"javax.management.*",
-        "org.apache.log4j.*"})
-@RunWith(PowerMockRunner.class)
-@PowerMockRunnerDelegate(ParameterizedTest.class)
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.WARN)
 public class ExactlyOnceWorkerSourceTaskTest {
     private static final String TOPIC = "topic";
-    private static final Map<String, byte[]> PARTITION = Collections.singletonMap("key", "partition".getBytes());
-    private static final Map<String, Integer> OFFSET = Collections.singletonMap("key", 12);
+    private static final Map<String, byte[]> PARTITION = Map.of("key", "partition".getBytes());
+    private static final Map<String, ?> OFFSET = offset(12);
 
     // Connect-format data
     private static final Schema KEY_SCHEMA = Schema.INT32_SCHEMA;
     private static final Integer KEY = -1;
     private static final Schema RECORD_SCHEMA = Schema.INT64_SCHEMA;
-    private static final Long RECORD = 12L;
+    private static final Long VALUE_1 = 12L;
+    private static final Long VALUE_2 = 13L;
     // Serialized data. The actual format of this data doesn't matter -- we just want to see that the right version
     // is used in the right place.
     private static final byte[] SERIALIZED_KEY = "converted-key".getBytes();
@@ -134,26 +138,22 @@ public class ExactlyOnceWorkerSourceTaskTest {
     private MockConnectMetrics metrics;
     @Mock private ErrorHandlingMetrics errorHandlingMetrics;
     private Time time;
-    private CountDownLatch pollLatch;
+    private ExactlyOnceWorkerSourceTask workerTask;
     @Mock private SourceTask sourceTask;
     @Mock private Converter keyConverter;
     @Mock private Converter valueConverter;
     @Mock private HeaderConverter headerConverter;
-    @Mock private TransformationChain<SourceRecord> transformationChain;
-    @Mock private KafkaProducer<byte[], byte[]> producer;
+    @Mock private TransformationChain<SourceRecord, SourceRecord> transformationChain;
+    @Mock private Producer<byte[], byte[]> producer;
     @Mock private TopicAdmin admin;
     @Mock private CloseableOffsetStorageReader offsetReader;
     @Mock private OffsetStorageWriter offsetWriter;
     @Mock private ClusterConfigState clusterConfigState;
-    private ExactlyOnceWorkerSourceTask workerTask;
-    @Mock private Future<RecordMetadata> sendFuture;
-    @MockStrict private TaskStatus.Listener statusListener;
+    @Mock private TaskStatus.Listener statusListener;
     @Mock private StatusBackingStore statusBackingStore;
     @Mock private ConnectorOffsetBackingStore offsetStore;
     @Mock private Runnable preProducerCheck;
     @Mock private Runnable postProducerCheck;
-
-    private Capture<org.apache.kafka.clients.producer.Callback> producerCallbacks;
 
     private static final Map<String, String> TASK_PROPS = new HashMap<>();
     static {
@@ -161,33 +161,70 @@ public class ExactlyOnceWorkerSourceTaskTest {
     }
     private static final TaskConfig TASK_CONFIG = new TaskConfig(TASK_PROPS);
 
-    private static final SourceRecord SOURCE_RECORD =
-            new SourceRecord(PARTITION, OFFSET, "topic", null, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+    private static final SourceRecord SOURCE_RECORD_1 =
+            new SourceRecord(PARTITION, OFFSET, TOPIC, null, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_1);
+    private static final SourceRecord SOURCE_RECORD_2 =
+            new SourceRecord(PARTITION, OFFSET, TOPIC, null, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_2);
 
-    private static final List<SourceRecord> RECORDS = Collections.singletonList(SOURCE_RECORD);
+    private static final List<SourceRecord> RECORDS = List.of(SOURCE_RECORD_1, SOURCE_RECORD_2);
+    private final AtomicReference<CountDownLatch> pollLatch = new AtomicReference<>(new CountDownLatch(0));
+    private final AtomicReference<List<SourceRecord>> pollRecords = new AtomicReference<>(RECORDS);
 
-    private final boolean enableTopicCreation;
+    private boolean enableTopicCreation;
 
-    @ParameterizedTest.Parameters
-    public static Collection<Boolean> parameters() {
-        return Arrays.asList(false, true);
-    }
+    private boolean taskStarted;
+    private Future<?> workerTaskFuture;
 
-    public ExactlyOnceWorkerSourceTaskTest(boolean enableTopicCreation) {
+
+    public void setup(boolean enableTopicCreation) throws Exception {
         this.enableTopicCreation = enableTopicCreation;
-    }
-
-    @Before
-    public void setup() {
+        this.taskStarted = false;
         Map<String, String> workerProps = workerProps();
         plugins = new Plugins(workerProps);
         config = new StandaloneConfig(workerProps);
         sourceConfig = new SourceConnectorConfig(plugins, sourceConnectorProps(), true);
-        producerCallbacks = EasyMock.newCapture();
         metrics = new MockConnectMetrics();
         time = Time.SYSTEM;
-        EasyMock.expect(offsetStore.primaryOffsetsTopic()).andStubReturn("offsets-topic");
-        pollLatch = new CountDownLatch(1);
+        when(offsetStore.primaryOffsetsTopic()).thenReturn("offsets-topic");
+        when(sourceTask.poll()).thenAnswer(invocation -> {
+            // Capture the records we'll return before decrementing the poll latch,
+            // since test cases may mutate the poll records field immediately
+            // after awaiting the latch
+            List<SourceRecord> result = pollRecords.get();
+            pollLatch.get().countDown();
+            Thread.sleep(10);
+            return result;
+        });
+        when(sourceTask.version()).thenReturn(null);
+    }
+
+    @AfterEach
+    public void teardown() throws Exception {
+        // In most tests, we don't really care about how many times the task got polled,
+        // how many times we prepared to write offsets, etc.
+        // We add these verify(..., anyTimes())... calls to make sure that those interactions
+        // with our mocks don't cause the verifyNoMoreInteractions(...) call to fail.
+        // Individual tests can add more fine-grained verification logic if necessary; the
+        // verifications here will not conflict with them
+
+        verify(sourceTask, MockitoUtils.anyTimes()).poll();
+        verify(sourceTask, MockitoUtils.anyTimes()).commit();
+        verify(sourceTask, MockitoUtils.anyTimes()).commitRecord(any(), any());
+
+        verify(offsetWriter, MockitoUtils.anyTimes()).offset(PARTITION, OFFSET);
+        verify(offsetWriter, MockitoUtils.anyTimes()).beginFlush();
+        verify(offsetWriter, MockitoUtils.anyTimes()).doFlush(any());
+
+        if (enableTopicCreation) {
+            verify(admin, MockitoUtils.anyTimes()).describeTopics(TOPIC);
+        }
+
+        verify(statusBackingStore, MockitoUtils.anyTimes()).getTopic(any(), any());
+        verify(offsetStore, MockitoUtils.anyTimes()).primaryOffsetsTopic();
+        verify(sourceTask).version();
+
+        verifyNoMoreInteractions(statusListener, producer, sourceTask, admin, offsetWriter, statusBackingStore, offsetStore, preProducerCheck, postProducerCheck);
+        if (metrics != null) metrics.stop();
     }
 
     private Map<String, String> workerProps() {
@@ -211,7 +248,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         // setup up props for the source connector
         Map<String, String> props = new HashMap<>();
         props.put("name", "foo-connector");
-        props.put(CONNECTOR_CLASS_CONFIG, MonitorableSourceConnector.class.getSimpleName());
+        props.put(CONNECTOR_CLASS_CONFIG, TestableSourceConnector.class.getSimpleName());
         props.put(TASKS_MAX_CONFIG, String.valueOf(1));
         props.put(TOPIC_CONFIG, TOPIC);
         props.put(KEY_CONVERTER_CLASS_CONFIG, StringConverter.class.getName());
@@ -226,9 +263,8 @@ public class ExactlyOnceWorkerSourceTaskTest {
         return props;
     }
 
-    @After
-    public void tearDown() {
-        if (metrics != null) metrics.stop();
+    private static Map<String, ?> offset(int n) {
+        return Map.of("key", n);
     }
 
     private void createWorkerTask() {
@@ -240,409 +276,342 @@ public class ExactlyOnceWorkerSourceTaskTest {
     }
 
     private void createWorkerTask(TargetState initialState, Converter keyConverter, Converter valueConverter, HeaderConverter headerConverter) {
-        workerTask = new ExactlyOnceWorkerSourceTask(taskId, sourceTask, statusListener, initialState, keyConverter, valueConverter, headerConverter,
+        Plugin<Converter> keyConverterPlugin = metrics.wrap(keyConverter, taskId,  true);
+        Plugin<Converter> valueConverterPlugin = metrics.wrap(valueConverter, taskId,  false);
+        Plugin<HeaderConverter> headerConverterPlugin = metrics.wrap(headerConverter, taskId);
+        workerTask = new ExactlyOnceWorkerSourceTask(taskId, sourceTask, statusListener, initialState, keyConverterPlugin, valueConverterPlugin, headerConverterPlugin,
                 transformationChain, producer, admin, TopicCreationGroup.configuredGroups(sourceConfig), offsetReader, offsetWriter, offsetStore,
-                config, clusterConfigState, metrics, errorHandlingMetrics, plugins.delegatingLoader(), time, RetryWithToleranceOperatorTest.NOOP_OPERATOR, statusBackingStore,
-                sourceConfig, Runnable::run, preProducerCheck, postProducerCheck);
+                config, clusterConfigState, metrics, errorHandlingMetrics, plugins.delegatingLoader(), time, RetryWithToleranceOperatorTest.noneOperator(), statusBackingStore,
+                sourceConfig, Runnable::run, preProducerCheck, postProducerCheck, List::of, null, TestPlugins.noOpLoaderSwap());
     }
 
-    @Test
-    public void testStartPaused() throws Exception {
-        final CountDownLatch pauseLatch = new CountDownLatch(1);
-
-        createWorkerTask(TargetState.PAUSED);
-
-        expectCall(() -> statusListener.onPause(taskId)).andAnswer(() -> {
-            pauseLatch.countDown();
-            return null;
-        });
-
-        // The task checks to see if there are offsets to commit before pausing
-        EasyMock.expect(offsetWriter.willFlush()).andReturn(false);
-
-        expectClose();
-
-        expectCall(() -> statusListener.onShutdown(taskId));
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        assertTrue(pauseLatch.await(5, TimeUnit.SECONDS));
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
-
-        taskFuture.get();
-
-        PowerMock.verifyAll();
-    }
-
-    @Test
-    public void testPause() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testRemoveMetrics(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
 
-        expectPreflight();
-        expectStartup();
+        workerTask.removeMetrics();
 
-        AtomicInteger polls = new AtomicInteger(0);
-        AtomicInteger flushes = new AtomicInteger(0);
-        pollLatch = new CountDownLatch(10);
-        expectPolls(polls);
-        expectAnyFlushes(flushes);
-
-        expectTopicCreation(TOPIC);
-
-        expectCall(() -> statusListener.onPause(taskId));
-
-        expectCall(sourceTask::stop);
-        expectCall(() -> statusListener.onShutdown(taskId));
-
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-        assertTrue(awaitLatch(pollLatch));
-
-        workerTask.transitionTo(TargetState.PAUSED);
-
-        int priorCount = polls.get();
-        Thread.sleep(100);
-
-        // since the transition is observed asynchronously, the count could be off by one loop iteration
-        assertTrue(polls.get() - priorCount <= 1);
-
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
-
-        taskFuture.get();
-
-        assertEquals("Task should have flushed offsets for every record poll, once on pause, and once for end-of-life offset commit",
-                flushes.get(), polls.get() + 2);
-
-        PowerMock.verifyAll();
+        assertEquals(Set.of(), filterToTaskMetrics(metrics.metrics().metrics().keySet()));
     }
 
-    @Test
-    public void testFailureInPreProducerCheck() {
+    private Set<MetricName> filterToTaskMetrics(Set<MetricName> metricNames) {
+        return metricNames
+                .stream()
+                .filter(m -> metrics.registry().taskGroupName().equals(m.group())
+                        || metrics.registry().sourceTaskGroupName().equals(m.group()))
+                .collect(Collectors.toSet());
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testStartPaused(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        createWorkerTask(TargetState.PAUSED);
+
+        final CountDownLatch pauseLatch = new CountDownLatch(1);
+        doAnswer(invocation -> {
+            pauseLatch.countDown();
+            return null;
+        }).when(statusListener).onPause(eq(taskId));
+
+        startTaskThread();
+
+        assertTrue(pauseLatch.await(5, TimeUnit.SECONDS));
+
+        awaitShutdown();
+
+        verify(statusListener).onPause(taskId);
+        verify(sourceTask, never()).start(any());
+        verify(sourceTask, never()).poll();
+        verifyCleanShutdown();
+        assertPollMetrics(0);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testPause(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        createWorkerTask();
+
+        expectSuccessfulSends();
+        expectSuccessfulFlushes();
+
+        final CountDownLatch pauseLatch = new CountDownLatch(1);
+        doAnswer(invocation -> {
+            pauseLatch.countDown();
+            return null;
+        }).when(statusListener).onPause(eq(taskId));
+
+        startTaskThread();
+
+        awaitPolls(2);
+        workerTask.transitionTo(TargetState.PAUSED);
+
+        long pollsBeforePause = pollCount();
+        ConcurrencyUtils.awaitLatch(pauseLatch, "task did not pause in time");
+
+        // since the transition is observed asynchronously, the count could be off by one loop iteration
+        assertTrue(pollCount() - pollsBeforePause <= 1);
+
+        awaitShutdown();
+
+        verify(statusListener).onPause(taskId);
+        // Task should have flushed offsets for every record poll, once on pause, and once for end-of-life offset commit
+        verifyTransactions(pollCount() + 2, pollCount() + 2);
+        verifySends();
+        verifyPossibleTopicCreation();
+        // make sure we didn't poll again after triggering shutdown
+        assertTrue(pollCount() - pollsBeforePause <= 1);
+
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testFailureInPreProducerCheck(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
 
         Exception exception = new ConnectException("Failed to perform zombie fencing");
-        expectCall(preProducerCheck::run).andThrow(exception);
-
-        expectCall(() -> statusListener.onFailure(taskId, exception));
-
-        // Don't expect task to be stopped since it was never started to begin with
-
-        expectClose();
-
-        PowerMock.replayAll();
+        doThrow(exception).when(preProducerCheck).run();
 
         workerTask.initialize(TASK_CONFIG);
         // No need to execute on a separate thread; preflight checks should all take place before the poll-send loop starts
         workerTask.run();
-
-        PowerMock.verifyAll();
+        verify(preProducerCheck).run();
+        verifyShutdown(true, false);
     }
 
-    @Test
-    public void testFailureInOffsetStoreStart() {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testFailureInProducerInitialization(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
 
-        expectCall(preProducerCheck::run);
-        expectCall(producer::initTransactions);
-        expectCall(postProducerCheck::run);
+        Exception exception = new ConnectException("You can't do that!");
+        doThrow(exception).when(producer).initTransactions();
+
+        workerTask.initialize(TASK_CONFIG);
+        // No need to execute on a separate thread; preflight checks should all take place before the poll-send loop starts
+        workerTask.run();
+        verify(preProducerCheck).run();
+        verify(producer).initTransactions();
+        verifyShutdown(true, false);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testFailureInPostProducerCheck(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        createWorkerTask();
+
+        Exception exception = new ConnectException("New task configs for the connector have already been generated");
+        doThrow(exception).when(postProducerCheck).run();
+
+        workerTask.initialize(TASK_CONFIG);
+        // No need to execute on a separate thread; preflight checks should all take place before the poll-send loop starts
+        workerTask.run();
+        verify(preProducerCheck).run();
+        verify(producer).initTransactions();
+        verify(postProducerCheck).run();
+        verifyShutdown(true, false);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testFailureInOffsetStoreStart(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        createWorkerTask();
 
         Exception exception = new ConnectException("No soup for you!");
-        expectCall(offsetStore::start).andThrow(exception);
-
-        expectCall(() -> statusListener.onFailure(taskId, exception));
-
-        // Don't expect task to be stopped since it was never started to begin with
-
-        expectClose();
-
-        PowerMock.replayAll();
+        doThrow(exception).when(offsetStore).start();
 
         workerTask.initialize(TASK_CONFIG);
         // No need to execute on a separate thread; preflight checks should all take place before the poll-send loop starts
         workerTask.run();
-
-        PowerMock.verifyAll();
+        verify(preProducerCheck).run();
+        verify(producer).initTransactions();
+        verify(postProducerCheck).run();
+        verify(offsetStore).start();
+        verifyShutdown(true, false);
     }
 
-    @Test
-    public void testFailureInProducerInitialization() {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testPollsInBackground(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
 
-        expectCall(preProducerCheck::run);
-        expectCall(producer::initTransactions);
-        Exception exception = new ConnectException("You can't do that!");
-        expectCall(postProducerCheck::run).andThrow(exception);
+        expectSuccessfulSends();
+        expectSuccessfulFlushes();
 
-        expectCall(() -> statusListener.onFailure(taskId, exception));
+        startTaskThread();
 
-        // Don't expect task to be stopped since it was never started to begin with
+        int minPolls = 10;
+        awaitPolls(minPolls);
+        awaitShutdown();
 
-        expectClose();
+        // Task should have flushed offsets for every record poll and for end-of-life offset commit
+        verifyTransactions(pollCount() + 1, pollCount() + 1);
+        verifySends();
+        verifyPossibleTopicCreation();
 
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        // No need to execute on a separate thread; preflight checks should all take place before the poll-send loop starts
-        workerTask.run();
-
-        PowerMock.verifyAll();
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
+        assertPollMetrics(minPolls);
+        assertTransactionMetrics(RECORDS.size());
     }
 
-    @Test
-    public void testFailureInPostProducerCheck() {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testFailureInPoll(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
-
-        expectCall(preProducerCheck::run);
-        Exception exception = new ConnectException("New task configs for the connector have already been generated");
-        expectCall(producer::initTransactions).andThrow(exception);
-
-        expectCall(() -> statusListener.onFailure(taskId, exception));
-
-        // Don't expect task to be stopped since it was never started to begin with
-
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        // No need to execute on a separate thread; preflight checks should all take place before the poll-send loop starts
-        workerTask.run();
-
-        PowerMock.verifyAll();
-    }
-
-    @Test
-    public void testPollsInBackground() throws Exception {
-        createWorkerTask();
-
-        expectPreflight();
-        expectStartup();
-
-        AtomicInteger polls = new AtomicInteger(0);
-        AtomicInteger flushes = new AtomicInteger(0);
-        pollLatch = new CountDownLatch(10);
-        expectPolls(polls);
-        expectAnyFlushes(flushes);
-
-        expectTopicCreation(TOPIC);
-
-        expectCall(sourceTask::stop);
-        expectCall(() -> statusListener.onShutdown(taskId));
-
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        assertTrue(awaitLatch(pollLatch));
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
-
-        taskFuture.get();
-        assertPollMetrics(10);
-        assertTransactionMetrics(1);
-
-        assertEquals("Task should have flushed offsets for every record poll and for end-of-life offset commit",
-                flushes.get(), polls.get() + 1);
-
-        PowerMock.verifyAll();
-    }
-
-    @Test
-    public void testFailureInPoll() throws Exception {
-        createWorkerTask();
-
-        expectPreflight();
-        expectStartup();
 
         final CountDownLatch pollLatch = new CountDownLatch(1);
         final RuntimeException exception = new RuntimeException();
-        EasyMock.expect(sourceTask.poll()).andAnswer(() -> {
+        when(sourceTask.poll()).thenAnswer(invocation -> {
             pollLatch.countDown();
             throw exception;
         });
 
-        expectCall(() -> statusListener.onFailure(taskId, exception));
-        expectCall(sourceTask::stop);
+        startTaskThread();
 
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        assertTrue(awaitLatch(pollLatch));
+        ConcurrencyUtils.awaitLatch(pollLatch, "task was not polled in time");
         //Failure in poll should trigger automatic stop of the worker
-        assertTrue(workerTask.awaitStop(1000));
+        awaitShutdown(false);
 
-        taskFuture.get();
+        verifyPreflight();
+        verifyStartup();
+        verifyShutdown(true, false);
         assertPollMetrics(0);
-
-        PowerMock.verifyAll();
     }
 
-    @Test
-    public void testFailureInPollAfterCancel() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testFailureInPollAfterCancel(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
-
-        expectPreflight();
-        expectStartup();
 
         final CountDownLatch pollLatch = new CountDownLatch(1);
         final CountDownLatch workerCancelLatch = new CountDownLatch(1);
         final RuntimeException exception = new RuntimeException();
-        EasyMock.expect(sourceTask.poll()).andAnswer(() -> {
+        when(sourceTask.poll()).thenAnswer(invocation -> {
             pollLatch.countDown();
-            assertTrue(awaitLatch(workerCancelLatch));
+            ConcurrencyUtils.awaitLatch(workerCancelLatch, "task was not cancelled in time");
             throw exception;
         });
 
-        expectCall(offsetReader::close);
-        expectCall(() -> producer.close(Duration.ZERO));
-        expectCall(sourceTask::stop);
+        startTaskThread();
 
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        assertTrue(awaitLatch(pollLatch));
+        ConcurrencyUtils.awaitLatch(pollLatch, "task was not polled in time");
         workerTask.cancel();
         workerCancelLatch.countDown();
-        assertTrue(workerTask.awaitStop(1000));
+        awaitShutdown(false);
 
-        taskFuture.get();
+        verifyPreflight();
+        verifyStartup();
+        verifyShutdown(false, true);
         assertPollMetrics(0);
-
-        PowerMock.verifyAll();
     }
 
-    @Test
-    public void testFailureInPollAfterStop() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testFailureInPollAfterStop(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
-
-        expectPreflight();
-        expectStartup();
 
         final CountDownLatch pollLatch = new CountDownLatch(1);
         final CountDownLatch workerStopLatch = new CountDownLatch(1);
         final RuntimeException exception = new RuntimeException();
-        EasyMock.expect(sourceTask.poll()).andAnswer(() -> {
+        // We check if there are offsets that need to be committed before shutting down the task
+        when(sourceTask.poll()).thenAnswer(invocation -> {
             pollLatch.countDown();
-            assertTrue(awaitLatch(workerStopLatch));
+            ConcurrencyUtils.awaitLatch(workerStopLatch, "task was not stopped in time");
             throw exception;
         });
 
-        expectCall(() -> statusListener.onShutdown(taskId));
-        expectCall(sourceTask::stop);
+        startTaskThread();
 
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        assertTrue(awaitLatch(pollLatch));
+        ConcurrencyUtils.awaitLatch(pollLatch, "task was not polled in time");
         workerTask.stop();
         workerStopLatch.countDown();
-        assertTrue(workerTask.awaitStop(1000));
+        awaitShutdown(false);
 
-        taskFuture.get();
+        verifyTransactions(0, 0);
+
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
         assertPollMetrics(0);
-
-        PowerMock.verifyAll();
     }
 
-    @Test
-    public void testPollReturnsNoRecords() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testPollReturnsNoRecords(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         // Test that the task handles an empty list of records
         createWorkerTask();
 
-        expectPreflight();
-        expectStartup();
+        // Make sure the task returns empty batches from poll before we start polling it
+        pollRecords.set(List.of());
 
-        final CountDownLatch pollLatch = expectEmptyPolls(1, new AtomicInteger());
-        EasyMock.expect(offsetWriter.willFlush()).andReturn(false).anyTimes();
+        when(offsetWriter.beginFlush()).thenReturn(false);
 
-        expectCall(sourceTask::stop);
-        expectCall(() -> statusListener.onShutdown(taskId));
+        startTaskThread();
 
-        expectClose();
+        awaitEmptyPolls(10);
 
-        PowerMock.replayAll();
+        awaitShutdown();
 
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
+        // task commits for each empty poll, plus the final commit
+        verifyTransactions(pollCount() + 1, 0);
 
-        assertTrue(awaitLatch(pollLatch));
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
-
-        taskFuture.get();
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
         assertPollMetrics(0);
-
-        PowerMock.verifyAll();
     }
 
-    @Test
-    public void testPollBasedCommit() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testPollBasedCommit(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         Map<String, String> connectorProps = sourceConnectorProps(SourceTask.TransactionBoundary.POLL);
         sourceConfig = new SourceConnectorConfig(plugins, connectorProps, enableTopicCreation);
 
         createWorkerTask();
 
-        expectPreflight();
-        expectStartup();
+        expectSuccessfulSends();
+        expectSuccessfulFlushes();
 
-        AtomicInteger polls = new AtomicInteger();
-        AtomicInteger flushes = new AtomicInteger();
-        expectPolls(polls);
-        expectAnyFlushes(flushes);
+        startTaskThread();
 
-        expectTopicCreation(TOPIC);
+        awaitPolls(10);
 
-        expectCall(sourceTask::stop);
-        expectCall(() -> statusListener.onShutdown(taskId));
+        awaitShutdown();
 
-        expectClose();
+        // Task should have flushed offsets for every record poll, and for end-of-life offset commit
+        verifyTransactions(pollCount() + 1, pollCount() + 1);
+        verifySends();
+        verifyPossibleTopicCreation();
 
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        assertTrue(awaitLatch(pollLatch));
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
-
-        taskFuture.get();
-
-        assertEquals("Task should have flushed offsets for every record poll, and for end-of-life offset commit",
-                flushes.get(), polls.get() + 1);
-
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
         assertPollMetrics(1);
-        assertTransactionMetrics(1);
-
-        PowerMock.verifyAll();
+        assertTransactionMetrics(RECORDS.size());
     }
 
-    @Test
-    public void testIntervalBasedCommit() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testIntervalBasedCommit(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         long commitInterval = 618;
         Map<String, String> connectorProps = sourceConnectorProps(SourceTask.TransactionBoundary.INTERVAL);
         connectorProps.put(TRANSACTION_BOUNDARY_INTERVAL_CONFIG, Long.toString(commitInterval));
@@ -652,569 +621,627 @@ public class ExactlyOnceWorkerSourceTaskTest {
 
         createWorkerTask();
 
-        expectPreflight();
-        expectStartup();
+        expectSuccessfulSends();
+        expectSuccessfulFlushes();
 
-        expectPolls();
-        final CountDownLatch firstPollLatch = new CountDownLatch(2);
-        final CountDownLatch secondPollLatch = new CountDownLatch(2);
-        final CountDownLatch thirdPollLatch = new CountDownLatch(2);
+        startTaskThread();
 
-        AtomicInteger flushes = new AtomicInteger();
-        expectFlush(FlushOutcome.SUCCEED, flushes);
-        expectFlush(FlushOutcome.SUCCEED, flushes);
-        expectFlush(FlushOutcome.SUCCEED, flushes);
-
-        expectTopicCreation(TOPIC);
-
-        expectCall(sourceTask::stop);
-        expectCall(() -> statusListener.onShutdown(taskId));
-
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        pollLatch = firstPollLatch;
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("No flushes should have taken place before offset commit interval has elapsed", 0, flushes.get());
+        awaitPolls(2);
+        assertEquals(0, flushCount(), "No flushes should have taken place before offset commit interval has elapsed");
         time.sleep(commitInterval);
 
-        pollLatch = secondPollLatch;
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("One flush should have taken place after offset commit interval has elapsed", 1, flushes.get());
+        awaitPolls(2);
+        assertEquals(1, flushCount(), "One flush should have taken place after offset commit interval has elapsed");
         time.sleep(commitInterval * 2);
 
-        pollLatch = thirdPollLatch;
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("Two flushes should have taken place after offset commit interval has elapsed again", 2, flushes.get());
+        awaitPolls(2);
+        assertEquals(2, flushCount(), 
+                "Two flushes should have taken place after offset commit interval has elapsed again");
 
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
+        awaitShutdown();
 
-        taskFuture.get();
+        // Task should have flushed offsets twice based on offset commit interval, and performed final end-of-life offset commit
+        verifyTransactions(3, 3);
+        verifySends();
+        verifyPossibleTopicCreation();
 
-        assertEquals("Task should have flushed offsets twice based on offset commit interval, and performed final end-of-life offset commit",
-                3, flushes.get());
-
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
         assertPollMetrics(2);
-
-        PowerMock.verifyAll();
+        assertTransactionMetrics(RECORDS.size() * 2);
     }
 
-    @Test
-    public void testConnectorBasedCommit() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testConnectorCommitOnBatch(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        testConnectorBasedCommit(TransactionContext::commitTransaction, false);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testConnectorCommitOnRecord(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        testConnectorBasedCommit(ctx -> ctx.commitTransaction(SOURCE_RECORD_2), false);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testConnectorAbortOnBatch(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        testConnectorBasedCommit(TransactionContext::abortTransaction, true);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testConnectorAbortOnRecord(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        testConnectorBasedCommit(ctx -> ctx.abortTransaction(SOURCE_RECORD_2), true);
+    }
+
+    private void testConnectorBasedCommit(Consumer<TransactionContext> requestCommit, boolean abort) throws Exception {
+        setup(enableTopicCreation);
         Map<String, String> connectorProps = sourceConnectorProps(SourceTask.TransactionBoundary.CONNECTOR);
         sourceConfig = new SourceConnectorConfig(plugins, connectorProps, enableTopicCreation);
         createWorkerTask();
 
-        expectPreflight();
-        expectStartup();
-
-        expectPolls();
-        List<CountDownLatch> pollLatches = IntStream.range(0, 7).mapToObj(i -> new CountDownLatch(3)).collect(Collectors.toList());
-
-        AtomicInteger flushes = new AtomicInteger();
-        // First flush: triggered by TransactionContext::commitTransaction (batch)
-        expectFlush(FlushOutcome.SUCCEED, flushes);
-
-        // Second flush: triggered by TransactionContext::commitTransaction (record)
-        expectFlush(FlushOutcome.SUCCEED, flushes);
-
-        // Third flush: triggered by TransactionContext::abortTransaction (batch)
-        expectCall(producer::abortTransaction);
-        EasyMock.expect(offsetWriter.willFlush()).andReturn(true);
-        expectFlush(FlushOutcome.SUCCEED, flushes);
-
-        // Third flush: triggered by TransactionContext::abortTransaction (record)
-        EasyMock.expect(offsetWriter.willFlush()).andReturn(true);
-        expectCall(producer::abortTransaction);
-        expectFlush(FlushOutcome.SUCCEED, flushes);
-
-        expectTopicCreation(TOPIC);
-
-        expectCall(sourceTask::stop);
-        expectCall(() -> statusListener.onShutdown(taskId));
-
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
+        expectSuccessfulSends();
+        expectSuccessfulFlushes();
 
         TransactionContext transactionContext = workerTask.sourceTaskContext.transactionContext();
 
-        int poll = -1;
-        pollLatch = pollLatches.get(++poll);
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("No flushes should have taken place without connector requesting transaction commit", 0, flushes.get());
+        startTaskThread();
 
-        transactionContext.commitTransaction();
-        pollLatch = pollLatches.get(++poll);
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("One flush should have taken place after connector requested batch commit", 1, flushes.get());
+        awaitPolls(3);
+        assertEquals(0, flushCount(),
+                "No flushes should have taken place without connector requesting transaction commit");
 
-        transactionContext.commitTransaction(SOURCE_RECORD);
-        pollLatch = pollLatches.get(++poll);
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("Two flushes should have taken place after connector requested individual record commit", 2, flushes.get());
+        requestCommit.accept(transactionContext);
+        awaitPolls(3);
+        assertEquals(1, flushCount(),
+                "One flush should have taken place after transaction commit/abort was requested");
 
-        pollLatch = pollLatches.get(++poll);
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("Only two flushes should still have taken place without connector re-requesting commit, even on identical records", 2, flushes.get());
+        awaitPolls(3);
+        assertEquals(1, flushCount(),
+                "Only one flush should still have taken place without connector re-requesting commit/abort, even on identical records");
 
-        transactionContext.abortTransaction();
-        pollLatch = pollLatches.get(++poll);
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("Three flushes should have taken place after connector requested batch abort", 3, flushes.get());
+        awaitShutdown();
 
-        transactionContext.abortTransaction(SOURCE_RECORD);
-        pollLatch = pollLatches.get(++poll);
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("Four flushes should have taken place after connector requested individual record abort", 4, flushes.get());
+        assertEquals(1, flushCount(),
+                "Task should have flushed offsets once based on connector-defined boundaries, and skipped final end-of-life offset commit");
+        // We begin a new transaction after connector-requested aborts so that we can still write offsets for the source records that were aborted
+        verify(producer, times(abort ? 3 : 2)).beginTransaction();
+        verifySends();
+        if (abort) {
+            verify(producer).abortTransaction();
+        }
+        verify(producer).commitTransaction();
 
-        pollLatch = pollLatches.get(++poll);
-        assertTrue(awaitLatch(pollLatch));
-        assertEquals("Only four flushes should still have taken place without connector re-requesting abort, even on identical records", 4, flushes.get());
-
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
-
-        taskFuture.get();
-
-        assertEquals("Task should have flushed offsets four times based on connector-defined boundaries, and skipped final end-of-life offset commit",
-                4, flushes.get());
-
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
+        verifyPossibleTopicCreation();
         assertPollMetrics(1);
-        assertTransactionMetrics(2);
-
-        PowerMock.verifyAll();
+        assertTransactionMetrics(abort ? 0 : (3 * RECORDS.size()));
     }
 
-    @Test
-    public void testCommitFlushCallbackFailure() throws Exception {
-        testCommitFailure(FlushOutcome.FAIL_FLUSH_CALLBACK);
-    }
-
-    @Test
-    public void testCommitTransactionFailure() throws Exception {
-        testCommitFailure(FlushOutcome.FAIL_TRANSACTION_COMMIT);
-    }
-
-    private void testCommitFailure(FlushOutcome causeOfFailure) throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testConnectorAbortsEmptyTransaction(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        Map<String, String> connectorProps = sourceConnectorProps(SourceTask.TransactionBoundary.CONNECTOR);
+        sourceConfig = new SourceConnectorConfig(plugins, connectorProps, enableTopicCreation);
         createWorkerTask();
 
-        expectPreflight();
-        expectStartup();
+        expectPossibleTopicCreation();
+        expectTaskGetTopic();
+        expectApplyTransformationChain();
+        expectConvertHeadersAndKeyValue();
+        TransactionContext transactionContext = workerTask.sourceTaskContext.transactionContext();
 
-        expectPolls();
-        expectFlush(causeOfFailure);
+        startTaskThread();
 
-        expectTopicCreation(TOPIC);
+        // Ensure the task produces at least one non-empty batch
+        awaitPolls(1);
+        // Start returning empty batches from SourceTask::poll
+        awaitEmptyPolls(1);
+        // The task commits the active transaction, which should not be empty and should
+        // result in a single call to Producer::commitTransaction
+        transactionContext.commitTransaction();
 
-        expectCall(sourceTask::stop);
-        // Unlike the standard WorkerSourceTask class, this one fails permanently when offset commits don't succeed
-        final CountDownLatch taskFailure = new CountDownLatch(1);
-        expectCall(() -> statusListener.onFailure(EasyMock.eq(taskId), EasyMock.anyObject()))
-                .andAnswer(() -> {
-                    taskFailure.countDown();
-                    return null;
-                });
+        // Ensure the task produces at least one empty batch after the transaction has been committed
+        awaitEmptyPolls(1);
+        // The task aborts the active transaction, which has no records in it and should not trigger a call to
+        // Producer::abortTransaction
+        transactionContext.abortTransaction();
+        // Make sure we go through at least one more poll, to give the framework a chance to handle the
+        // transaction abort request
+        awaitEmptyPolls(1);
 
-        expectClose();
+        awaitShutdown(true);
 
-        PowerMock.replayAll();
+        verify(producer, times(1)).beginTransaction();
+        verify(producer, times(1)).commitTransaction();
+        verify(producer, atLeast(RECORDS.size())).send(any(), any());
+        // We never abort transactions in this test!
+        verify(producer, never()).abortTransaction();
 
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> taskFuture = executor.submit(workerTask);
-
-        assertTrue(awaitLatch(taskFailure));
-        workerTask.stop();
-        assertTrue(workerTask.awaitStop(1000));
-
-        taskFuture.get();
-        assertPollMetrics(1);
-
-        PowerMock.verifyAll();
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
+        verifyPossibleTopicCreation();
     }
 
-    @Test
-    public void testSendRecordsRetries() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testMixedConnectorTransactionBoundaryCommitLastRecordAbortBatch(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        // We fail tasks that try to abort and commit a transaction for the same record or same batch
+        // But we don't fail if they try to commit the last record of a batch and abort the entire batch
+        // Instead, we give precedence to the record-based operation
+
+        Map<String, String> connectorProps = sourceConnectorProps(SourceTask.TransactionBoundary.CONNECTOR);
+        sourceConfig = new SourceConnectorConfig(plugins, connectorProps, enableTopicCreation);
+        createWorkerTask();
+
+        expectPossibleTopicCreation();
+        expectTaskGetTopic();
+        expectApplyTransformationChain();
+        expectConvertHeadersAndKeyValue();
+        when(offsetWriter.beginFlush())
+                .thenReturn(true)
+                .thenReturn(false);
+
+        workerTask.initialize(TASK_CONFIG);
+
+        TransactionContext transactionContext = workerTask.sourceTaskContext.transactionContext();
+
+        // Request that the batch be aborted
+        transactionContext.abortTransaction();
+        // Request that the last record in the batch be committed
+        transactionContext.commitTransaction(RECORDS.get(RECORDS.size() - 1));
+
+        workerTask.toSend = RECORDS;
+        assertTrue(workerTask.sendRecords());
+
+        verifyTransactions(2, 1);
+        verifySends(RECORDS.size());
+        // We never abort transactions in this test!
+        verify(producer, never()).abortTransaction();
+
+        verifyPossibleTopicCreation();
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testMixedConnectorTransactionBoundaryAbortLastRecordCommitBatch(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        // We fail tasks that try to abort and commit a transaction for the same record or same batch
+        // But we don't fail if they try to abort the last record of a batch and commit the entire batch
+        // Instead, we give precedence to the record-based operation
+
+        Map<String, String> connectorProps = sourceConnectorProps(SourceTask.TransactionBoundary.CONNECTOR);
+        sourceConfig = new SourceConnectorConfig(plugins, connectorProps, enableTopicCreation);
+        createWorkerTask();
+
+        expectPossibleTopicCreation();
+        expectTaskGetTopic();
+        expectApplyTransformationChain();
+        expectConvertHeadersAndKeyValue();
+        when(offsetWriter.beginFlush())
+                .thenReturn(true)
+                .thenReturn(false);
+
+        workerTask.initialize(TASK_CONFIG);
+
+        TransactionContext transactionContext = workerTask.sourceTaskContext.transactionContext();
+
+        // Request that the last record in the batch be aborted
+        transactionContext.abortTransaction(RECORDS.get(RECORDS.size() - 1));
+        // Request that the batch be committed
+        transactionContext.commitTransaction();
+
+        workerTask.toSend = RECORDS;
+        assertTrue(workerTask.sendRecords());
+
+        verify(offsetWriter, times(2)).beginFlush();
+        verify(sourceTask, times(2)).commit();
+        // We open a transaction once for the aborted batch, and once to commit offsets for that batch
+        verify(producer, times(2)).beginTransaction();
+        verify(producer, times(1)).commitTransaction();
+        verify(offsetWriter, times(1)).doFlush(any());
+        verify(producer, times(1)).abortTransaction();
+
+        verifySends(RECORDS.size());
+
+        verifyPossibleTopicCreation();
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testCommitFlushSyncCallbackFailure(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        Exception failure = new RecordTooLargeException();
+        when(offsetWriter.beginFlush()).thenReturn(true);
+        when(offsetWriter.doFlush(any())).thenAnswer(invocation -> {
+            Callback<Void> callback = invocation.getArgument(0);
+            callback.onCompletion(failure, null);
+            return null;
+        });
+        testCommitFailure(failure, false);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testCommitFlushAsyncCallbackFailure(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        Exception failure = new RecordTooLargeException();
+        when(offsetWriter.beginFlush()).thenReturn(true);
+        // doFlush delegates its callback to the producer,
+        // which delays completing the callback until commitTransaction
+        AtomicReference<Callback<Void>> callback = new AtomicReference<>();
+        when(offsetWriter.doFlush(any())).thenAnswer(invocation -> {
+            callback.set(invocation.getArgument(0));
+            return null;
+        });
+        doAnswer(invocation -> {
+            callback.get().onCompletion(failure, null);
+            return null;
+        }).when(producer).commitTransaction();
+        testCommitFailure(failure, true);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testCommitTransactionFailure(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
+        Exception failure = new RecordTooLargeException();
+        when(offsetWriter.beginFlush()).thenReturn(true);
+        doThrow(failure).when(producer).commitTransaction();
+        testCommitFailure(failure, true);
+    }
+
+    private void testCommitFailure(Exception commitException, boolean executeCommit) throws Exception {
+        createWorkerTask();
+
+        // Unlike the standard WorkerSourceTask class, this one fails permanently when offset commits don't succeed
+        final CountDownLatch taskFailure = new CountDownLatch(1);
+        final AtomicReference<Exception> taskException = new AtomicReference<>();
+        doAnswer(invocation -> {
+            taskFailure.countDown();
+            taskException.set(invocation.getArgument(1));
+            return null;
+        }).when(statusListener).onFailure(eq(taskId), any());
+
+        expectSuccessfulSends();
+
+        startTaskThread();
+
+        ConcurrencyUtils.awaitLatch(taskFailure, "task did not fail in time");
+
+        awaitShutdown();
+
+        assertEquals(commitException, taskException.get().getCause());
+        verifySends();
+        verifyPossibleTopicCreation();
+        verify(producer).beginTransaction();
+        if (executeCommit) {
+            verify(producer).commitTransaction();
+        }
+        verify(offsetWriter).cancelFlush();
+
+        verifyPreflight();
+        verifyStartup();
+        verifyShutdown(true, false);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testSendRecordsRetries(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
 
         // Differentiate only by Kafka partition so we can reuse conversion expectations
-        SourceRecord record1 = new SourceRecord(PARTITION, OFFSET, "topic", 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
-        SourceRecord record2 = new SourceRecord(PARTITION, OFFSET, "topic", 2, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
-        SourceRecord record3 = new SourceRecord(PARTITION, OFFSET, "topic", 3, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+        SourceRecord record1 = new SourceRecord(PARTITION, offset(1), TOPIC, 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_1);
+        SourceRecord record2 = new SourceRecord(PARTITION, offset(2), TOPIC, 2, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_1);
+        SourceRecord record3 = new SourceRecord(PARTITION, offset(3), TOPIC, 3, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_1);
 
-        expectTopicCreation(TOPIC);
+        expectPossibleTopicCreation();
+        expectTaskGetTopic();
+        expectApplyTransformationChain();
+        expectConvertHeadersAndKeyValue();
 
-        // First round
-        expectSendRecordOnce(false);
-        expectCall(producer::beginTransaction);
-        // Any Producer retriable exception should work here
-        expectSendRecordSyncFailure(new org.apache.kafka.common.errors.TimeoutException("retriable sync failure"));
+        // We're trying to send three records
+        workerTask.toSend = List.of(record1, record2, record3);
+        OngoingStubbing<Future<RecordMetadata>> producerSend = when(producer.send(any(), any()));
+        // The first one is sent successfully
+        producerSend = expectSuccessfulSend(producerSend);
+        // The second one encounters a retriable failure
+        producerSend = expectSynchronousFailedSend(producerSend, new org.apache.kafka.common.errors.TimeoutException("retriable sync failure"));
+        // All subsequent sends (which should include a retry of the second record and an initial try for the third) succeed
+        expectSuccessfulSend(producerSend);
 
-        // Second round
-        expectSendRecordOnce(true);
-        expectSendRecordOnce(false);
-
-        PowerMock.replayAll();
-
-        // Try to send 3, make first pass, second fail. Should save last two
-        workerTask.toSend = Arrays.asList(record1, record2, record3);
-        workerTask.sendRecords();
-        assertEquals(Arrays.asList(record2, record3), workerTask.toSend);
+        assertFalse(workerTask.sendRecords());
+        assertEquals(List.of(record2, record3), workerTask.toSend);
+        verify(producer).beginTransaction();
+        // When using poll-based transaction boundaries, we do not commit transactions while retrying delivery for a batch
+        verify(producer, never()).commitTransaction();
+        verifySends(2);
+        verifyPossibleTopicCreation();
 
         // Next they all succeed
-        workerTask.sendRecords();
+        assertTrue(workerTask.sendRecords());
         assertNull(workerTask.toSend);
+        // After the entire batch is successfully dispatched to the producer, we can finally commit the transaction
+        verify(producer, times(1)).commitTransaction();
+        verifySends(4);
 
-        PowerMock.verifyAll();
+        verify(offsetWriter).offset(PARTITION, offset(1));
+        verify(offsetWriter).offset(PARTITION, offset(2));
+        verify(offsetWriter).offset(PARTITION, offset(3));
     }
 
-    @Test
-    public void testSendRecordsProducerSendFailsImmediately() {
-        if (!enableTopicCreation)
-            // should only test with topic creation enabled
-            return;
-
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testSendRecordsProducerSendFailsImmediately(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
 
-        SourceRecord record1 = new SourceRecord(PARTITION, OFFSET, TOPIC, 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
-        SourceRecord record2 = new SourceRecord(PARTITION, OFFSET, TOPIC, 2, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+        SourceRecord record1 = new SourceRecord(PARTITION, OFFSET, TOPIC, 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_1);
+        SourceRecord record2 = new SourceRecord(PARTITION, OFFSET, TOPIC, 2, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_1);
 
-        expectCall(producer::beginTransaction);
-        expectTopicCreation(TOPIC);
-        expectConvertHeadersAndKeyValue(TOPIC, true, emptyHeaders());
-        expectApplyTransformationChain(false);
+        expectPossibleTopicCreation();
+        expectConvertHeadersAndKeyValue();
+        expectApplyTransformationChain();
 
-        EasyMock.expect(producer.send(EasyMock.anyObject(), EasyMock.anyObject()))
-                .andThrow(new KafkaException("Producer closed while send in progress", new InvalidTopicException(TOPIC)));
+        when(producer.send(any(), any()))
+                .thenThrow(new KafkaException("Producer closed while send in progress", new InvalidTopicException(TOPIC)));
 
-        PowerMock.replayAll();
-
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         assertThrows(ConnectException.class, workerTask::sendRecords);
 
-        PowerMock.verifyAll();
+        verify(producer).beginTransaction();
+        verify(producer).send(any(), any());
+        verify(offsetWriter, never()).offset(any(), any());
+        verifyPossibleTopicCreation();
     }
 
-    @Test
-    public void testSlowTaskStart() throws Exception {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testSlowTaskStart(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         final CountDownLatch startupLatch = new CountDownLatch(1);
         final CountDownLatch finishStartupLatch = new CountDownLatch(1);
 
         createWorkerTask();
 
-        expectPreflight();
-
-        expectCall(() -> sourceTask.initialize(EasyMock.anyObject(SourceTaskContext.class)));
-        expectCall(() -> sourceTask.start(TASK_PROPS));
-        EasyMock.expectLastCall().andAnswer(() -> {
+        doAnswer(invocation -> {
             startupLatch.countDown();
-            assertTrue(awaitLatch(finishStartupLatch));
+            ConcurrencyUtils.awaitLatch(finishStartupLatch, "task was not allowed to finish startup in time");
             return null;
-        });
+        }).when(sourceTask).start(eq(TASK_PROPS));
 
-        expectCall(() -> statusListener.onStartup(taskId));
-
-        expectCall(sourceTask::stop);
-        EasyMock.expect(offsetWriter.willFlush()).andReturn(false);
-
-        expectCall(() -> statusListener.onShutdown(taskId));
-
-        expectClose();
-
-        PowerMock.replayAll();
-
-        workerTask.initialize(TASK_CONFIG);
-        Future<?> workerTaskFuture = executor.submit(workerTask);
+        when(offsetWriter.beginFlush()).thenReturn(false);
+        startTaskThread();
 
         // Stopping immediately while the other thread has work to do should result in no polling, no offset commits,
         // exiting the work thread immediately, and the stop() method will be invoked in the background thread since it
         // cannot be invoked immediately in the thread trying to stop the task.
-        assertTrue(awaitLatch(startupLatch));
+        ConcurrencyUtils.awaitLatch(startupLatch, "task did not start up in time");
         workerTask.stop();
         finishStartupLatch.countDown();
-        assertTrue(workerTask.awaitStop(1000));
+        awaitShutdown(false);
 
-        workerTaskFuture.get();
+        verify(sourceTask, never()).poll();
+        // task commit called on shutdown
+        verifyTransactions(1, 0);
+        verifySends(0);
 
-        PowerMock.verifyAll();
+        verifyPreflight();
+        verifyStartup();
+        verifyCleanShutdown();
     }
 
-    @Test
-    public void testCancel() {
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    public void testCancel(boolean enableTopicCreation) throws Exception {
+        setup(enableTopicCreation);
         createWorkerTask();
-
-        expectCall(offsetReader::close);
-        expectCall(() -> producer.close(Duration.ZERO));
-
-        PowerMock.replayAll();
 
         // workerTask said something dumb on twitter
         workerTask.cancel();
 
-        PowerMock.verifyAll();
+        verify(offsetReader).close();
+        verify(producer).close(Duration.ZERO);
     }
 
-    private TopicAdmin.TopicCreationResponse createdTopic(String topic) {
-        Set<String> created = Collections.singleton(topic);
-        Set<String> existing = Collections.emptySet();
-        return new TopicAdmin.TopicCreationResponse(created, existing);
+    /**
+     * @return how many times the source task was {@link SourceTask#poll() polled}
+     */
+    private int pollCount() {
+        return (int) MockitoUtils.countInvocations(sourceTask, "poll");
     }
 
-    private CountDownLatch expectEmptyPolls(int minimum, final AtomicInteger count) throws InterruptedException {
-        final CountDownLatch latch = new CountDownLatch(minimum);
-        // Note that we stub these to allow any number of calls because the thread will continue to
-        // run. The count passed in + latch returned just makes sure we get *at least* that number of
-        // calls
-        EasyMock.expect(sourceTask.poll())
-                .andStubAnswer(() -> {
-                    count.incrementAndGet();
-                    latch.countDown();
-                    Thread.sleep(10);
-                    return Collections.emptyList();
-                });
-        return latch;
+    /**
+     * @return how many times an {@link OffsetStorageWriter#doFlush(Callback) offset flush} took place
+     */
+    private int flushCount() {
+        return (int) MockitoUtils.countInvocations(offsetWriter, "doFlush", Callback.class);
     }
 
-    private void expectPolls(final AtomicInteger pollCount) throws Exception {
-        expectCall(producer::beginTransaction).atLeastOnce();
-        // Note that we stub these to allow any number of calls because the thread will continue to
-        // run. The count passed in + latch returned just makes sure we get *at least* that number of
-        // calls
-        EasyMock.expect(sourceTask.poll())
-                .andStubAnswer(() -> {
-                    pollCount.incrementAndGet();
-                    pollLatch.countDown();
-                    Thread.sleep(10);
-                    return RECORDS;
-                });
-        // Fallout of the poll() call
-        expectSendRecordAnyTimes();
+    private void awaitPolls(int minimum, List<SourceRecord> records) {
+        pollRecords.set(records);
+        pollLatch.set(new CountDownLatch(minimum));
+        ConcurrencyUtils.awaitLatch(pollLatch.get(), "task was not polled " + minimum + " time(s) quickly enough");
     }
 
-    private void expectPolls() throws Exception {
-        expectPolls(new AtomicInteger());
+    private void awaitEmptyPolls(int minimum) {
+        awaitPolls(minimum, List.of());
     }
 
-    @SuppressWarnings("unchecked")
-    private void expectSendRecordSyncFailure(Throwable error) {
-        expectConvertHeadersAndKeyValue(false);
-        expectApplyTransformationChain(false);
-
-        offsetWriter.offset(PARTITION, OFFSET);
-        PowerMock.expectLastCall();
-
-        EasyMock.expect(
-                producer.send(EasyMock.anyObject(ProducerRecord.class),
-                        EasyMock.anyObject(org.apache.kafka.clients.producer.Callback.class)))
-                .andThrow(error);
+    private void awaitPolls(int minimum) {
+        awaitPolls(minimum, RECORDS);
     }
 
-    private Capture<ProducerRecord<byte[], byte[]>> expectSendRecordAnyTimes() {
-        return expectSendRecordSendSuccess(true, false);
+    private void awaitShutdown() throws InterruptedException, ExecutionException {
+        awaitShutdown(true);
     }
 
-    private Capture<ProducerRecord<byte[], byte[]>> expectSendRecordOnce(boolean isRetry) {
-        return expectSendRecordSendSuccess(false, isRetry);
+    private void awaitShutdown(boolean triggerStop) throws InterruptedException, ExecutionException {
+        if (triggerStop)
+            workerTask.stop();
+        assertTrue(workerTask.awaitStop(1000));
+        workerTaskFuture.get();
     }
 
-    private Capture<ProducerRecord<byte[], byte[]>> expectSendRecordSendSuccess(boolean anyTimes, boolean isRetry) {
-        return expectSendRecord(TOPIC, anyTimes, isRetry, true, true, emptyHeaders());
+    private void startTaskThread() {
+        workerTask.initialize(TASK_CONFIG);
+        workerTaskFuture = executor.submit(workerTask);
     }
 
-    private Capture<ProducerRecord<byte[], byte[]>> expectSendRecord(
-            String topic,
-            boolean anyTimes,
-            boolean isRetry,
-            boolean sendSuccess,
-            boolean isMockedConverters,
-            Headers headers
-    ) {
-        if (isMockedConverters) {
-            expectConvertHeadersAndKeyValue(topic, anyTimes, headers);
-        }
-
-        expectApplyTransformationChain(anyTimes);
-
-        Capture<ProducerRecord<byte[], byte[]>> sent = EasyMock.newCapture();
-
-        // 1. Offset data is passed to the offset storage.
-        if (!isRetry) {
-            offsetWriter.offset(PARTITION, OFFSET);
-            if (anyTimes)
-                PowerMock.expectLastCall().anyTimes();
-            else
-                PowerMock.expectLastCall();
-        }
-
-        // 2. Converted data passed to the producer, which will need callbacks invoked for flush to work
-        IExpectationSetters<Future<RecordMetadata>> expect = EasyMock.expect(
-                producer.send(EasyMock.capture(sent),
-                        EasyMock.capture(producerCallbacks)));
-        IAnswer<Future<RecordMetadata>> expectResponse = () -> {
-            synchronized (producerCallbacks) {
-                for (org.apache.kafka.clients.producer.Callback cb : producerCallbacks.getValues()) {
-                    if (sendSuccess) {
-                        cb.onCompletion(new RecordMetadata(new TopicPartition("foo", 0), 0, 0,
-                                0L, 0, 0), null);
-                    } else {
-                        cb.onCompletion(null, new TopicAuthorizationException("foo"));
-                    }
-                }
-                producerCallbacks.reset();
-            }
-            return sendFuture;
-        };
-        if (anyTimes)
-            expect.andStubAnswer(expectResponse);
-        else
-            expect.andAnswer(expectResponse);
-
-        if (sendSuccess) {
-            // 3. As a result of a successful producer send callback, we note the use of the topic
-            expectTaskGetTopic(anyTimes);
-        }
-
-        return sent;
+    private void expectSuccessfulFlushes() {
+        when(offsetWriter.beginFlush()).thenReturn(true);
+        when(offsetWriter.doFlush(any())).thenAnswer(invocation -> {
+            Callback<Void> cb = invocation.getArgument(0);
+            cb.onCompletion(null, null);
+            return null;
+        });
     }
 
-    private void expectConvertHeadersAndKeyValue(boolean anyTimes) {
-        expectConvertHeadersAndKeyValue(TOPIC, anyTimes, emptyHeaders());
+    private void expectSuccessfulSends() {
+        expectConvertHeadersAndKeyValue();
+        expectApplyTransformationChain();
+        expectSuccessfulSend(when(producer.send(any(), any())));
+        expectTaskGetTopic();
+        expectPossibleTopicCreation();
     }
 
-    private void expectConvertHeadersAndKeyValue(String topic, boolean anyTimes, Headers headers) {
+    private OngoingStubbing<Future<RecordMetadata>> expectSuccessfulSend(OngoingStubbing<Future<RecordMetadata>> whenSend) {
+        return whenSend.thenAnswer(invocation -> {
+            org.apache.kafka.clients.producer.Callback cb = invocation.getArgument(1);
+            cb.onCompletion(
+                    new RecordMetadata(
+                            new TopicPartition(TOPIC, 0),
+                            0,
+                            0,
+                            0L,
+                            0,
+                            0),
+                    null);
+            return null;
+        });
+    }
+
+    private OngoingStubbing<Future<RecordMetadata>> expectSynchronousFailedSend(OngoingStubbing<Future<RecordMetadata>> whenSend, Exception failure) {
+        return whenSend.thenThrow(failure);
+    }
+
+    private void expectConvertHeadersAndKeyValue() {
+        Headers headers = new RecordHeaders();
         for (Header header : headers) {
-            IExpectationSetters<byte[]> convertHeaderExpect = EasyMock.expect(headerConverter.fromConnectHeader(topic, header.key(), Schema.STRING_SCHEMA, new String(header.value())));
-            if (anyTimes)
-                convertHeaderExpect.andStubReturn(header.value());
-            else
-                convertHeaderExpect.andReturn(header.value());
+            when(headerConverter.fromConnectHeader(eq(TOPIC), eq(header.key()), eq(Schema.STRING_SCHEMA), eq(new String(header.value()))))
+                    .thenReturn(header.value());
         }
-        IExpectationSetters<byte[]> convertKeyExpect = EasyMock.expect(keyConverter.fromConnectData(topic, headers, KEY_SCHEMA, KEY));
-        if (anyTimes)
-            convertKeyExpect.andStubReturn(SERIALIZED_KEY);
-        else
-            convertKeyExpect.andReturn(SERIALIZED_KEY);
-        IExpectationSetters<byte[]> convertValueExpect = EasyMock.expect(valueConverter.fromConnectData(topic, headers, RECORD_SCHEMA, RECORD));
-        if (anyTimes)
-            convertValueExpect.andStubReturn(SERIALIZED_RECORD);
-        else
-            convertValueExpect.andReturn(SERIALIZED_RECORD);
+        when(keyConverter.fromConnectData(eq(TOPIC), eq(headers), eq(KEY_SCHEMA), eq(KEY)))
+                .thenReturn(SERIALIZED_KEY);
+        when(valueConverter.fromConnectData(eq(TOPIC), eq(headers), eq(RECORD_SCHEMA), eq(VALUE_1)))
+                .thenReturn(SERIALIZED_RECORD);
     }
 
-    private void expectApplyTransformationChain(boolean anyTimes) {
-        final Capture<SourceRecord> recordCapture = EasyMock.newCapture();
-        IExpectationSetters<SourceRecord> convertKeyExpect = EasyMock.expect(transformationChain.apply(EasyMock.capture(recordCapture)));
-        if (anyTimes)
-            convertKeyExpect.andStubAnswer(recordCapture::getValue);
-        else
-            convertKeyExpect.andAnswer(recordCapture::getValue);
+    private void expectApplyTransformationChain() {
+        when(transformationChain.apply(any(), any()))
+                .thenAnswer(invocation -> invocation.getArgument(1));
     }
 
-    private void expectTaskGetTopic(boolean anyTimes) {
-        final Capture<String> connectorCapture = EasyMock.newCapture();
-        final Capture<String> topicCapture = EasyMock.newCapture();
-        IExpectationSetters<TopicStatus> expect = EasyMock.expect(statusBackingStore.getTopic(
-                EasyMock.capture(connectorCapture),
-                EasyMock.capture(topicCapture)));
-        if (anyTimes) {
-            expect.andStubAnswer(() -> new TopicStatus(
-                    topicCapture.getValue(),
-                    new ConnectorTaskId(connectorCapture.getValue(), 0),
-                    time.milliseconds()));
+    private void expectTaskGetTopic() {
+        when(statusBackingStore.getTopic(any(), eq(TOPIC)))
+                .thenAnswer(invocation -> new TopicStatus(
+                        invocation.getArgument(1),
+                        new ConnectorTaskId(invocation.getArgument(0), 0),
+                        time.milliseconds()
+                ));
+    }
+
+    private void expectPossibleTopicCreation() {
+        if (config.topicCreationEnable()) {
+            Set<String> created = Set.of(TOPIC);
+            Set<String> existing = Set.of();
+            TopicAdmin.TopicCreationResponse creationResponse = new TopicAdmin.TopicCreationResponse(created, existing);
+            when(admin.createOrFindTopics(any())).thenReturn(creationResponse);
+        }
+    }
+
+    private void verifyPreflight() {
+        verify(preProducerCheck).run();
+        verify(producer).initTransactions();
+        verify(postProducerCheck).run();
+        verify(offsetStore).start();
+    }
+
+    private void verifyStartup() {
+        verify(sourceTask).initialize(any());
+        verify(sourceTask).start(TASK_PROPS);
+        taskStarted = true;
+        verify(statusListener).onStartup(taskId);
+    }
+
+    private void verifyCleanShutdown() throws Exception {
+        verifyShutdown(false, false);
+    }
+
+    private void verifyShutdown(boolean taskFailed, boolean cancelled) throws Exception {
+        if (cancelled) {
+            verify(producer).close(Duration.ZERO);
+            verify(producer, times(2)).close(any());
+            verify(offsetReader, times(2)).close();
         } else {
-            expect.andAnswer(() -> new TopicStatus(
-                    topicCapture.getValue(),
-                    new ConnectorTaskId(connectorCapture.getValue(), 0),
-                    time.milliseconds()));
+            verify(producer).close(any());
+            verify(offsetReader).close();
         }
-        if (connectorCapture.hasCaptured() && topicCapture.hasCaptured()) {
-            assertEquals("job", connectorCapture.getValue());
-            assertEquals(TOPIC, topicCapture.getValue());
+
+        verify(offsetStore).stop();
+        verify(admin).close(any());
+        verify(transformationChain).close();
+        verify(headerConverter).close();
+
+        if (taskStarted) {
+            verify(sourceTask).stop();
+        }
+
+        if (taskFailed) {
+            verify(statusListener).onFailure(eq(taskId), any());
+        } else if (!cancelled) {
+            verify(statusListener).onShutdown(taskId);
         }
     }
 
-    private boolean awaitLatch(CountDownLatch latch) {
-        try {
-            return latch.await(5000, TimeUnit.MILLISECONDS);
-        } catch (InterruptedException e) {
-            // ignore
+    private void verifyPossibleTopicCreation() {
+        if (enableTopicCreation) {
+            verify(admin).createOrFindTopics(any());
+        } else {
+            verify(admin, never()).createOrFindTopics(any());
         }
-        return false;
     }
 
-    private enum FlushOutcome {
-        SUCCEED,
-        SUCCEED_ANY_TIMES,
-        FAIL_FLUSH_CALLBACK,
-        FAIL_TRANSACTION_COMMIT
+    private void verifySends() {
+        verifySends(pollCount() * RECORDS.size());
     }
 
-    private CountDownLatch expectFlush(FlushOutcome outcome, AtomicInteger flushCount) {
-        CountDownLatch result = new CountDownLatch(1);
-        org.easymock.IExpectationSetters<Boolean> flushBegin = EasyMock
-                .expect(offsetWriter.beginFlush())
-                .andAnswer(() -> {
-                    flushCount.incrementAndGet();
-                    result.countDown();
-                    return true;
-                });
-        if (FlushOutcome.SUCCEED_ANY_TIMES.equals(outcome)) {
-            flushBegin.anyTimes();
-        }
-
-        Capture<Callback<Void>> flushCallback = EasyMock.newCapture();
-        org.easymock.IExpectationSetters<Future<Void>> offsetFlush =
-                EasyMock.expect(offsetWriter.doFlush(EasyMock.capture(flushCallback)));
-        switch (outcome) {
-            case SUCCEED:
-                // The worker task doesn't actually use the returned future
-                offsetFlush.andReturn(null);
-                expectCall(producer::commitTransaction);
-                expectCall(() -> sourceTask.commitRecord(EasyMock.anyObject(), EasyMock.anyObject()));
-                expectCall(sourceTask::commit);
-                break;
-            case SUCCEED_ANY_TIMES:
-                // The worker task doesn't actually use the returned future
-                offsetFlush.andReturn(null).anyTimes();
-                expectCall(producer::commitTransaction).anyTimes();
-                expectCall(() -> sourceTask.commitRecord(EasyMock.anyObject(), EasyMock.anyObject())).anyTimes();
-                expectCall(sourceTask::commit).anyTimes();
-                break;
-            case FAIL_FLUSH_CALLBACK:
-                expectCall(producer::commitTransaction);
-                offsetFlush.andAnswer(() -> {
-                    flushCallback.getValue().onCompletion(new RecordTooLargeException(), null);
-                    return null;
-                });
-                expectCall(offsetWriter::cancelFlush);
-                break;
-            case FAIL_TRANSACTION_COMMIT:
-                offsetFlush.andReturn(null);
-                expectCall(producer::commitTransaction)
-                        .andThrow(new RecordTooLargeException());
-                expectCall(offsetWriter::cancelFlush);
-                break;
-            default:
-                fail("Unexpected flush outcome: " + outcome);
-        }
-        return result;
+    private void verifySends(int count) {
+        verify(producer, times(count)).send(any(), any());
     }
 
-    private CountDownLatch expectFlush(FlushOutcome outcome) {
-        return expectFlush(outcome, new AtomicInteger());
-    }
-
-    private CountDownLatch expectAnyFlushes(AtomicInteger flushCount) {
-        EasyMock.expect(offsetWriter.willFlush()).andReturn(true).anyTimes();
-        return expectFlush(FlushOutcome.SUCCEED_ANY_TIMES, flushCount);
+    private void verifyTransactions(int numTaskCommits, int numProducerCommits) throws InterruptedException {
+        // these operations happen on every commit opportunity
+        VerificationMode commitOpportunities = times(numTaskCommits);
+        verify(offsetWriter, commitOpportunities).beginFlush();
+        verify(sourceTask, commitOpportunities).commit();
+        // these operations only happen on non-empty commits
+        VerificationMode commits = times(numProducerCommits);
+        verify(producer, commits).beginTransaction();
+        verify(producer, commits).commitTransaction();
+        verify(offsetWriter, commits).doFlush(any());
     }
 
     private void assertTransactionMetrics(int minimumMaxSizeExpected) {
@@ -1228,8 +1255,8 @@ public class ExactlyOnceWorkerSourceTaskTest {
         if (actualMax - actualMin <= 0.000001d) {
             assertEquals(actualMax, actualAvg, 0.000002d);
         } else {
-            assertTrue("Average transaction size should be greater than minimum transaction size", actualAvg > actualMin);
-            assertTrue("Average transaction size should be less than maximum transaction size", actualAvg < actualMax);
+            assertTrue(actualAvg > actualMin, "Average transaction size should be greater than minimum transaction size");
+            assertTrue(actualAvg < actualMax, "Average transaction size should be less than maximum transaction size");
         }
     }
 
@@ -1243,7 +1270,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
             assertEquals(RECORDS.size(), metrics.currentMetricValueAsDouble(taskGroup, "batch-size-avg"), 0.000001d);
             assertTrue(pollRate > 0.0d);
         } else {
-            assertTrue(pollRate == 0.0d);
+            assertEquals(0.0d, pollRate, 0.0);
         }
         assertTrue(pollTotal >= minimumPollCountExpected);
 
@@ -1252,7 +1279,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         if (minimumPollCountExpected > 0) {
             assertTrue(writeRate > 0.0d);
         } else {
-            assertTrue(writeRate == 0.0d);
+            assertEquals(0.0d, writeRate, 0.0);
         }
         assertTrue(writeTotal >= minimumPollCountExpected);
 
@@ -1270,56 +1297,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         }
     }
 
-    private RecordHeaders emptyHeaders() {
-        return new RecordHeaders();
-    }
-
     private abstract static class TestSourceTask extends SourceTask {
     }
 
-    @FunctionalInterface
-    private interface MockedMethodCall {
-        void invoke() throws Exception;
-    }
-
-    private static <T> org.easymock.IExpectationSetters<T> expectCall(MockedMethodCall call) {
-        try {
-            call.invoke();
-        } catch (RuntimeException e) {
-            throw e;
-        } catch (Exception e) {
-            throw new RuntimeException("Mocked method invocation threw a checked exception", e);
-        }
-        return EasyMock.expectLastCall();
-    }
-
-    private void expectPreflight() {
-        expectCall(preProducerCheck::run);
-        expectCall(producer::initTransactions);
-        expectCall(postProducerCheck::run);
-        expectCall(offsetStore::start);
-    }
-
-    private void expectStartup() {
-        expectCall(() -> sourceTask.initialize(EasyMock.anyObject(SourceTaskContext.class)));
-        expectCall(() -> sourceTask.start(TASK_PROPS));
-        expectCall(() -> statusListener.onStartup(taskId));
-    }
-
-    private void expectClose() {
-        expectCall(offsetStore::stop);
-        expectCall(() -> producer.close(EasyMock.anyObject(Duration.class)));
-        expectCall(() -> admin.close(EasyMock.anyObject(Duration.class)));
-        expectCall(transformationChain::close);
-        expectCall(offsetReader::close);
-        expectCall(headerConverter::close);
-    }
-
-    private void expectTopicCreation(String topic) {
-        if (config.topicCreationEnable()) {
-            EasyMock.expect(admin.describeTopics(topic)).andReturn(Collections.emptyMap());
-            Capture<NewTopic> newTopicCapture = EasyMock.newCapture();
-            EasyMock.expect(admin.createOrFindTopics(EasyMock.capture(newTopicCapture))).andReturn(createdTopic(topic));
-        }
-    }
 }
