@@ -19,35 +19,44 @@ package org.apache.kafka.connect.runtime.distributed;
 
 import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.common.config.ConfigException;
-import org.junit.Test;
-import org.mockito.MockedStatic;
+import org.apache.kafka.common.security.auth.SecurityProtocol;
 
-import javax.crypto.KeyGenerator;
-import javax.crypto.Mac;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+
+import java.security.InvalidParameterException;
 import java.security.NoSuchAlgorithmException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+
+import javax.crypto.KeyGenerator;
+import javax.crypto.Mac;
 
 import static org.apache.kafka.connect.runtime.distributed.DistributedConfig.EXACTLY_ONCE_SOURCE_SUPPORT_CONFIG;
 import static org.apache.kafka.connect.runtime.distributed.DistributedConfig.GROUP_ID_CONFIG;
 import static org.apache.kafka.connect.runtime.distributed.DistributedConfig.INTER_WORKER_KEY_GENERATION_ALGORITHM_CONFIG;
 import static org.apache.kafka.connect.runtime.distributed.DistributedConfig.INTER_WORKER_SIGNATURE_ALGORITHM_CONFIG;
 import static org.apache.kafka.connect.runtime.distributed.DistributedConfig.INTER_WORKER_VERIFICATION_ALGORITHMS_CONFIG;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.STRICT_STUBS)
 public class DistributedConfigTest {
 
     public Map<String, String> configs() {
@@ -69,58 +78,50 @@ public class DistributedConfigTest {
     }
 
     @Test
-    public void testDefaultAlgorithmsNotPresent() {
+    public void testDefaultAlgorithmsNotPresent() throws NoSuchAlgorithmException {
         final String fakeKeyGenerationAlgorithm = "FakeKeyGenerationAlgorithm";
         final String fakeMacAlgorithm = "FakeMacAlgorithm";
 
         final KeyGenerator fakeKeyGenerator = mock(KeyGenerator.class);
         final Mac fakeMac = mock(Mac.class);
+        final Crypto crypto = mock(Crypto.class);
 
         Map<String, String> configs = configs();
         configs.put(DistributedConfig.INTER_WORKER_KEY_GENERATION_ALGORITHM_CONFIG, fakeKeyGenerationAlgorithm);
         configs.put(DistributedConfig.INTER_WORKER_SIGNATURE_ALGORITHM_CONFIG, fakeMacAlgorithm);
         configs.put(DistributedConfig.INTER_WORKER_VERIFICATION_ALGORITHMS_CONFIG, fakeMacAlgorithm);
 
-        try (
-                MockedStatic<KeyGenerator> keyGenerator = mockStatic(KeyGenerator.class);
-                MockedStatic<Mac> mac = mockStatic(Mac.class)
-        ) {
-            // Make it seem like the default key generation algorithm isn't available on this worker
-            keyGenerator.when(() -> KeyGenerator.getInstance(DistributedConfig.INTER_WORKER_KEY_GENERATION_ALGORITHM_DEFAULT))
-                    .thenThrow(new NoSuchAlgorithmException());
-            // But the one specified in the worker config file is
-            keyGenerator.when(() -> KeyGenerator.getInstance(fakeKeyGenerationAlgorithm))
-                    .thenReturn(fakeKeyGenerator);
+        // Make it seem like the default key generation algorithm isn't available on this worker
+        doThrow(new NoSuchAlgorithmException())
+                .when(crypto).keyGenerator(DistributedConfig.INTER_WORKER_KEY_GENERATION_ALGORITHM_DEFAULT);
+        // But the one specified in the worker config file is
+        doReturn(fakeKeyGenerator)
+                .when(crypto).keyGenerator(fakeKeyGenerationAlgorithm);
 
-            // And for the signature algorithm
-            mac.when(() -> Mac.getInstance(DistributedConfig.INTER_WORKER_SIGNATURE_ALGORITHM_DEFAULT))
-                    .thenThrow(new NoSuchAlgorithmException());
-            // Likewise for key verification algorithms
-            DistributedConfig.INTER_WORKER_VERIFICATION_ALGORITHMS_DEFAULT.forEach(verificationAlgorithm ->
-                keyGenerator.when(() -> Mac.getInstance(verificationAlgorithm))
-                        .thenThrow(new NoSuchAlgorithmException())
-            );
-            mac.when(() -> Mac.getInstance(fakeMacAlgorithm))
-                    .thenReturn(fakeMac);
-
-            // Should succeed; even though the defaults aren't present, the manually-specified algorithms are valid
-            new DistributedConfig(configs);
-
-            // Should fail; the default key generation algorithm isn't present, and no override is specified
-            String removed = configs.remove(INTER_WORKER_KEY_GENERATION_ALGORITHM_CONFIG);
-            assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
-            configs.put(INTER_WORKER_KEY_GENERATION_ALGORITHM_CONFIG, removed);
-
-            // Should fail; the default key generation algorithm isn't present, and no override is specified
-            removed = configs.remove(INTER_WORKER_SIGNATURE_ALGORITHM_CONFIG);
-            assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
-            configs.put(INTER_WORKER_SIGNATURE_ALGORITHM_CONFIG, removed);
-
-            // Should fail; the default key generation algorithm isn't present, and no override is specified
-            removed = configs.remove(INTER_WORKER_VERIFICATION_ALGORITHMS_CONFIG);
-            assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
-            configs.put(INTER_WORKER_VERIFICATION_ALGORITHMS_CONFIG, removed);
+        // And for the key verification algorithms
+        for (String verificationAlgorithm : DistributedConfig.INTER_WORKER_VERIFICATION_ALGORITHMS_DEFAULT) {
+            doThrow(new NoSuchAlgorithmException())
+                    .when(crypto).mac(verificationAlgorithm);
         }
+        doReturn(fakeMac).when(crypto).mac(fakeMacAlgorithm);
+
+        // Should succeed; even though the defaults aren't present, the manually-specified algorithms are valid
+        new DistributedConfig(crypto, configs);
+
+        // Should fail; the default key generation algorithm isn't present, and no override is specified
+        String removed = configs.remove(INTER_WORKER_KEY_GENERATION_ALGORITHM_CONFIG);
+        assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
+        configs.put(INTER_WORKER_KEY_GENERATION_ALGORITHM_CONFIG, removed);
+
+        // Should fail; the default key generation algorithm isn't present, and no override is specified
+        removed = configs.remove(INTER_WORKER_SIGNATURE_ALGORITHM_CONFIG);
+        assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
+        configs.put(INTER_WORKER_SIGNATURE_ALGORITHM_CONFIG, removed);
+
+        // Should fail; the default key generation algorithm isn't present, and no override is specified
+        removed = configs.remove(INTER_WORKER_VERIFICATION_ALGORITHMS_CONFIG);
+        assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
+        configs.put(INTER_WORKER_VERIFICATION_ALGORITHMS_CONFIG, removed);
     }
 
     @Test
@@ -147,9 +148,9 @@ public class DistributedConfigTest {
 
     private void testSupportedAlgorithms(String type, String... expectedAlgorithms) {
         Set<String> supportedAlgorithms = DistributedConfig.supportedAlgorithms(type);
-        Set<String> unuspportedAlgorithms = new HashSet<>(Arrays.asList(expectedAlgorithms));
-        unuspportedAlgorithms.removeAll(supportedAlgorithms);
-        assertEquals(type + " algorithms were found that should be supported by this JVM but are not", Collections.emptySet(), unuspportedAlgorithms);
+        Set<String> unsupportedAlgorithms = new HashSet<>(List.of(expectedAlgorithms));
+        unsupportedAlgorithms.removeAll(supportedAlgorithms);
+        assertEquals(Set.of(), unsupportedAlgorithms, type + " algorithms were found that should be supported by this JVM but are not");
     }
 
     @Test
@@ -197,21 +198,26 @@ public class DistributedConfigTest {
     }
 
     @Test
-    public void shouldFailWithInvalidKeySize() {
+    public void shouldFailWithInvalidKeySize() throws NoSuchAlgorithmException {
         Map<String, String> configs = configs();
+        Crypto crypto = mock(Crypto.class);
+        KeyGenerator keygen = mock(KeyGenerator.class);
+        when(crypto.keyGenerator(DistributedConfig.INTER_WORKER_KEY_GENERATION_ALGORITHM_DEFAULT)).thenReturn(keygen);
+        // Some implementations of KeyGenerator don't fail with 0 keysize, so mock the error
+        doThrow(InvalidParameterException.class).when(keygen).init(0);
         configs.put(DistributedConfig.INTER_WORKER_KEY_SIZE_CONFIG, "0");
-        assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
+        assertThrows(ConfigException.class, () -> new DistributedConfig(crypto, configs));
     }
 
     @Test
     public void shouldValidateAllVerificationAlgorithms() {
-        List<String> algorithms =
-            new ArrayList<>(Arrays.asList("HmacSHA1", "HmacSHA256", "HmacMD5", "bad-algorithm"));
+        List<String> algorithms = List.of("HmacSHA1", "HmacSHA256", "HmacMD5", "bad-algorithm");
         Map<String, String> configs = configs();
         for (int i = 0; i < algorithms.size(); i++) {
             configs.put(DistributedConfig.INTER_WORKER_VERIFICATION_ALGORITHMS_CONFIG, String.join(",", algorithms));
             assertThrows(ConfigException.class, () -> new DistributedConfig(configs));
-            algorithms.add(algorithms.remove(0));
+            // Rotate the algorithm list by creating a new list with rotated elements
+            algorithms = List.of(algorithms.get(1), algorithms.get(2), algorithms.get(3), algorithms.get(0));
         }
     }
 
@@ -414,6 +420,16 @@ public class DistributedConfigTest {
     }
 
     @Test
+    public void testCaseInsensitiveSecurityProtocol() {
+        final String saslSslLowerCase = SecurityProtocol.SASL_SSL.name.toLowerCase(Locale.ROOT);
+        final Map<String, String> configs = configs();
+        configs.put(CommonClientConfigs.SECURITY_PROTOCOL_CONFIG, saslSslLowerCase);
+        final DistributedConfig distributedConfig = new DistributedConfig(configs);
+        assertEquals(saslSslLowerCase, distributedConfig.originalsStrings()
+                .get(CommonClientConfigs.SECURITY_PROTOCOL_CONFIG));
+    }
+
+    @Test
     public void shouldIdentifyNeedForTransactionalLeader() {
         Map<String, String> workerProps = configs();
 
@@ -448,6 +464,16 @@ public class DistributedConfigTest {
                 "connect-cluster-\u2603",
                 new DistributedConfig(workerProps).transactionalProducerId()
         );
+    }
+
+    @Test
+    public void testOsDefaultSocketBufferSizes() {
+        Map<String, String> configs = configs();
+        configs.put(CommonClientConfigs.SEND_BUFFER_CONFIG,
+            Integer.toString(CommonClientConfigs.SEND_BUFFER_LOWER_BOUND));
+        configs.put(CommonClientConfigs.RECEIVE_BUFFER_CONFIG,
+            Integer.toString(CommonClientConfigs.RECEIVE_BUFFER_LOWER_BOUND));
+        new DistributedConfig(configs);
     }
 
 }
