@@ -17,18 +17,32 @@
 
 package org.apache.kafka.connect.runtime.isolation;
 
-import static org.junit.Assert.fail;
+
+import org.apache.kafka.common.config.AbstractConfig;
+import org.apache.kafka.common.config.ConfigDef;
+import org.apache.kafka.common.config.ConfigDef.Importance;
+import org.apache.kafka.common.config.ConfigDef.Type;
+import org.apache.kafka.common.internals.SecurityManagerCompatibility;
+import org.apache.kafka.common.utils.Utils;
+import org.apache.kafka.connect.runtime.WorkerConfig;
+import org.apache.kafka.connect.storage.Converter;
+
+import org.apache.maven.artifact.versioning.VersionRange;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInfo;
+import org.junit.jupiter.api.Timeout;
+import org.mockito.Mockito;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.lang.management.LockInfo;
 import java.lang.management.ManagementFactory;
 import java.lang.management.MonitorInfo;
 import java.lang.management.ThreadInfo;
 import java.net.URL;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.BrokenBarrierException;
@@ -41,26 +55,12 @@ import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import org.apache.kafka.common.config.AbstractConfig;
-import org.apache.kafka.common.config.ConfigDef;
-import org.apache.kafka.common.config.ConfigDef.Importance;
-import org.apache.kafka.common.config.ConfigDef.Type;
-import org.apache.kafka.connect.json.JsonConverter;
-import org.apache.kafka.connect.runtime.WorkerConfig;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TestName;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import static org.junit.jupiter.api.Assertions.fail;
 
 public class SynchronizationTest {
 
     public static final Logger log = LoggerFactory.getLogger(SynchronizationTest.class);
-
-    @Rule
-    public final TestName testName = new TestName();
 
     private String threadPrefix;
     private Plugins plugins;
@@ -68,26 +68,17 @@ public class SynchronizationTest {
     private Breakpoint<String> dclBreakpoint;
     private Breakpoint<String> pclBreakpoint;
 
-    @Before
-    public void setup() {
-        TestPlugins.assertAvailable();
-        Map<String, String> pluginProps = Collections.singletonMap(
+    @BeforeEach
+    public void setup(TestInfo testInfo) {
+        Map<String, String> pluginProps = Map.of(
             WorkerConfig.PLUGIN_PATH_CONFIG,
-            String.join(",", TestPlugins.pluginPath())
+            TestPlugins.pluginPathJoined()
         );
         threadPrefix = SynchronizationTest.class.getSimpleName()
-            + "." + testName.getMethodName() + "-";
+            + "." + testInfo.getDisplayName() + "-";
         dclBreakpoint = new Breakpoint<>();
         pclBreakpoint = new Breakpoint<>();
-        plugins = new Plugins(pluginProps) {
-            @Override
-            protected DelegatingClassLoader newDelegatingClassLoader(List<String> paths) {
-                return AccessController.doPrivileged(
-                    (PrivilegedAction<DelegatingClassLoader>) () ->
-                        new SynchronizedDelegatingClassLoader(paths)
-                );
-            }
-        };
+        plugins = new Plugins(pluginProps, Plugins.class.getClassLoader(), new SynchronizedClassLoaderFactory());
         exec = new ThreadPoolExecutor(
             2,
             2,
@@ -99,7 +90,7 @@ public class SynchronizationTest {
 
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws InterruptedException {
         dclBreakpoint.clear();
         pclBreakpoint.clear();
@@ -123,7 +114,6 @@ public class SynchronizationTest {
         public synchronized void set(Predicate<T> predicate) {
             clear();
             this.predicate = predicate;
-            // As soon as the barrier is tripped, the barrier will be reset for the next round.
             barrier = new CyclicBarrier(2);
         }
 
@@ -135,7 +125,7 @@ public class SynchronizationTest {
             Predicate<T> predicate;
             CyclicBarrier barrier;
             synchronized (this) {
-                predicate  = this.predicate;
+                predicate = this.predicate;
                 barrier = this.barrier;
             }
             if (predicate != null && !predicate.test(obj)) {
@@ -167,43 +157,58 @@ public class SynchronizationTest {
         }
     }
 
-    private class SynchronizedDelegatingClassLoader extends DelegatingClassLoader {
-        {
-            ClassLoader.registerAsParallelCapable();
-        }
-
-        public SynchronizedDelegatingClassLoader(List<String> pluginPaths) {
-            super(pluginPaths);
-        }
-
+    private class SynchronizedClassLoaderFactory extends ClassLoaderFactory {
         @Override
-        protected PluginClassLoader newPluginClassLoader(
-            URL pluginLocation,
-            URL[] urls,
-            ClassLoader parent
-        ) {
-            return AccessController.doPrivileged(
-                (PrivilegedAction<PluginClassLoader>) () ->
-                    new SynchronizedPluginClassLoader(pluginLocation, urls, parent)
+        public DelegatingClassLoader newDelegatingClassLoader(ClassLoader parent) {
+            return SecurityManagerCompatibility.get().doPrivileged(
+                    () -> new SynchronizedDelegatingClassLoader(parent, dclBreakpoint)
             );
         }
 
         @Override
-        public PluginClassLoader pluginClassLoader(String name) {
-            dclBreakpoint.await(name);
-            dclBreakpoint.await(name);
-            return super.pluginClassLoader(name);
+        public PluginClassLoader newPluginClassLoader(
+                URL pluginLocation,
+                URL[] urls,
+                ClassLoader parent
+        ) {
+            return SecurityManagerCompatibility.get().doPrivileged(
+                    () -> new SynchronizedPluginClassLoader(pluginLocation, urls, parent, pclBreakpoint)
+            );
         }
     }
 
-    private class SynchronizedPluginClassLoader extends PluginClassLoader {
-        {
+    private static class SynchronizedDelegatingClassLoader extends DelegatingClassLoader {
+        static {
             ClassLoader.registerAsParallelCapable();
         }
 
+        private final Breakpoint<String> dclBreakpoint;
 
-        public SynchronizedPluginClassLoader(URL pluginLocation, URL[] urls, ClassLoader parent) {
+        public SynchronizedDelegatingClassLoader(ClassLoader parent, Breakpoint<String> dclBreakpoint) {
+            super(parent);
+            this.dclBreakpoint = dclBreakpoint;
+        }
+
+        @Override
+        public PluginClassLoader pluginClassLoader(String name, VersionRange range) {
+            dclBreakpoint.await(name);
+            dclBreakpoint.await(name);
+            return super.pluginClassLoader(name, range);
+        }
+    }
+
+    private static class SynchronizedPluginClassLoader extends PluginClassLoader {
+        static {
+            ClassLoader.registerAsParallelCapable();
+        }
+
+        private final Breakpoint<String> pclBreakpoint;
+
+        public SynchronizedPluginClassLoader(
+                URL pluginLocation, URL[] urls, ClassLoader parent, Breakpoint<String> pclBreakpoint
+        ) {
             super(pluginLocation, urls, parent);
+            this.pclBreakpoint = pclBreakpoint;
         }
 
         @Override
@@ -213,46 +218,48 @@ public class SynchronizationTest {
         }
     }
 
+    @Test
+    @Timeout(15)
     // If the test times out, then there's a deadlock in the test but not necessarily the code
-    @Test(timeout = 15000L)
     public void testSimultaneousUpwardAndDownwardDelegating() throws Exception {
-        String t1Class = TestPlugins.SAMPLING_CONVERTER;
+        String t1Class = TestPlugins.TestPlugin.SAMPLING_CONVERTER.className();
         // Grab a reference to the target PluginClassLoader before activating breakpoints
-        ClassLoader connectorLoader = plugins.delegatingLoader().connectorLoader(t1Class);
+        ClassLoader connectorLoader = plugins.connectorLoader(t1Class);
 
         // THREAD 1: loads a class by delegating downward starting from the DelegatingClassLoader
         // DelegatingClassLoader breakpoint will only trigger on this thread
         dclBreakpoint.set(t1Class::equals);
         Runnable thread1 = () -> {
             // Use the DelegatingClassLoader as the current context loader
-            ClassLoader savedLoader = Plugins.compareAndSwapLoaders(plugins.delegatingLoader());
+            try (LoaderSwap loaderSwap = plugins.withClassLoader(plugins.delegatingLoader())) {
 
-            // Load an isolated plugin from the delegating classloader, which will
-            // 1. Enter the DelegatingClassLoader
-            // 2. Wait on dclBreakpoint for test to continue
-            // 3. Enter the PluginClassLoader
-            // 4. Load the isolated plugin class and return
-            new AbstractConfig(
-                new ConfigDef().define("a.class", Type.CLASS, Importance.HIGH, ""),
-                Collections.singletonMap("a.class", t1Class));
-            Plugins.compareAndSwapLoaders(savedLoader);
+                // Load an isolated plugin from the delegating classloader, which will
+                // 1. Enter the DelegatingClassLoader
+                // 2. Wait on dclBreakpoint for test to continue
+                // 3. Enter the PluginClassLoader
+                // 4. Load the isolated plugin class and return
+                new AbstractConfig(
+                        new ConfigDef().define("a.class", Type.CLASS, Importance.HIGH, ""),
+                        Map.of("a.class", t1Class));
+            }
         };
 
         // THREAD 2: loads a class by delegating upward starting from the PluginClassLoader
-        String t2Class = JsonConverter.class.getName();
+        // Use any non-plugin class that no plugins depend on, so that the class isn't loaded during plugin discovery
+        String t2Class = Mockito.class.getName();
         // PluginClassLoader breakpoint will only trigger on this thread
         pclBreakpoint.set(t2Class::equals);
         Runnable thread2 = () -> {
             // Use the PluginClassLoader as the current context loader
-            ClassLoader savedLoader = Plugins.compareAndSwapLoaders(connectorLoader);
-            // Load a non-isolated class from the plugin classloader, which will
-            // 1. Enter the PluginClassLoader
-            // 2. Wait for the test to continue
-            // 3. Enter the DelegatingClassLoader
-            // 4. Load the non-isolated class and return
-            new AbstractConfig(new ConfigDef().define("a.class", Type.CLASS, Importance.HIGH, ""),
-                Collections.singletonMap("a.class", t2Class));
-            Plugins.compareAndSwapLoaders(savedLoader);
+            try (LoaderSwap loaderSwap = plugins.withClassLoader(connectorLoader)) {
+                // Load a non-isolated class from the plugin classloader, which will
+                // 1. Enter the PluginClassLoader
+                // 2. Wait for the test to continue
+                // 3. Enter the DelegatingClassLoader
+                // 4. Load the non-isolated class and return
+                new AbstractConfig(new ConfigDef().define("a.class", Type.CLASS, Importance.HIGH, ""),
+                        Map.of("a.class", t2Class));
+            }
         };
 
         // STEP 1: Have T1 enter the DelegatingClassLoader and pause
@@ -291,12 +298,13 @@ public class SynchronizationTest {
     }
 
     // If the test times out, then there's a deadlock in the test but not necessarily the code
-    @Test(timeout = 15000L)
+    @Test
     // Ensure the PluginClassLoader is parallel capable and not synchronized on its monitor lock
+    @Timeout(15)
     public void testPluginClassLoaderDoesntHoldMonitorLock()
         throws InterruptedException, TimeoutException, BrokenBarrierException {
-        String t1Class = TestPlugins.SAMPLING_CONVERTER;
-        ClassLoader connectorLoader = plugins.delegatingLoader().connectorLoader(t1Class);
+        String t1Class = TestPlugins.TestPlugin.SAMPLING_CONVERTER.className();
+        ClassLoader connectorLoader = plugins.connectorLoader(t1Class);
 
         Object externalTestLock = new Object();
         Breakpoint<Object> testBreakpoint = new Breakpoint<>();
@@ -319,7 +327,7 @@ public class SynchronizationTest {
             synchronized (externalTestLock) {
                 try {
                     progress.await(null);
-                    Class.forName(TestPlugins.SAMPLING_CONVERTER, true, connectorLoader);
+                    Utils.loadClass(TestPlugins.TestPlugin.SAMPLING_CONVERTER.className(), Converter.class);
                 } catch (ClassNotFoundException e) {
                     throw new RuntimeException("Failed to load test plugin", e);
                 }
@@ -453,9 +461,7 @@ public class SynchronizationTest {
         return r -> {
             // This is essentially Executors.defaultThreadFactory except with
             // custom thread names so in order to filter by thread names when debugging
-            SecurityManager s = System.getSecurityManager();
-            Thread t = new Thread((s != null) ? s.getThreadGroup() :
-                Thread.currentThread().getThreadGroup(), r,
+            Thread t = new Thread(Thread.currentThread().getThreadGroup(), r,
                 threadPrefix + threadNumber.getAndIncrement(),
                 0);
             if (t.isDaemon()) {
