@@ -16,13 +16,19 @@
  */
 package org.apache.kafka.raft.internals;
 
+import org.apache.kafka.common.message.LeaderChangeMessage;
 import org.apache.kafka.common.record.CompressionType;
+import org.apache.kafka.common.record.ControlRecordType;
 import org.apache.kafka.common.record.FileRecords;
 import org.apache.kafka.common.record.MemoryRecords;
 import org.apache.kafka.common.record.Records;
 import org.apache.kafka.common.utils.BufferSupplier;
+import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.raft.BatchReader;
+import org.apache.kafka.raft.ControlRecord;
 import org.apache.kafka.raft.internals.RecordsIteratorTest.TestBatch;
+
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.Mockito;
@@ -48,9 +54,9 @@ class RecordsBatchReaderTest {
     @ParameterizedTest
     @EnumSource(CompressionType.class)
     public void testReadFromMemoryRecords(CompressionType compressionType) {
-        long baseOffset = 57;
-
-        List<TestBatch<String>> batches = RecordsIteratorTest.createBatches(baseOffset);
+        long seed = 57;
+        List<TestBatch<String>> batches = RecordsIteratorTest.createBatches(seed);
+        long baseOffset = batches.get(0).baseOffset;
         MemoryRecords memRecords = RecordsIteratorTest.buildRecords(compressionType, batches);
 
         testBatchReader(baseOffset, memRecords, batches);
@@ -59,15 +65,38 @@ class RecordsBatchReaderTest {
     @ParameterizedTest
     @EnumSource(CompressionType.class)
     public void testReadFromFileRecords(CompressionType compressionType) throws Exception {
-        long baseOffset = 57;
-
-        List<TestBatch<String>> batches = RecordsIteratorTest.createBatches(baseOffset);
+        long seed = 57;
+        List<TestBatch<String>> batches = RecordsIteratorTest.createBatches(seed);
+        long baseOffset = batches.get(0).baseOffset;
         MemoryRecords memRecords = RecordsIteratorTest.buildRecords(compressionType, batches);
 
         FileRecords fileRecords = FileRecords.open(tempFile());
         fileRecords.append(memRecords);
 
         testBatchReader(baseOffset, fileRecords, batches);
+    }
+
+    @Test
+    public void testLeaderChangeControlBatch() {
+        // Confirm that the RecordsBatchReader is able to iterate over control batches
+        MemoryRecords records = RecordsIteratorTest.buildControlRecords(ControlRecordType.LEADER_CHANGE);
+        ControlRecord expectedRecord = ControlRecord.of(new LeaderChangeMessage());
+
+        try (RecordsBatchReader<String> reader = RecordsBatchReader.of(
+                0,
+                records,
+                serde,
+                BufferSupplier.NO_CACHING,
+                MAX_BATCH_BYTES,
+                ignore -> { },
+                true,
+                new LogContext()
+            )
+        ) {
+            assertTrue(reader.hasNext());
+            assertEquals(List.of(expectedRecord), reader.next().controlRecords());
+            assertFalse(reader.hasNext());
+        }
     }
 
     private void testBatchReader(
@@ -101,20 +130,22 @@ class RecordsBatchReaderTest {
             bufferSupplier,
             MAX_BATCH_BYTES,
             closeListener,
-            true
+            true,
+            new LogContext()
         );
+        try {
+            for (TestBatch<String> batch : expectedBatches) {
+                assertTrue(reader.hasNext());
+                assertEquals(batch, TestBatch.from(reader.next()));
+            }
 
-        for (TestBatch<String> batch : expectedBatches) {
-            assertTrue(reader.hasNext());
-            assertEquals(batch, TestBatch.from(reader.next()));
+            assertFalse(reader.hasNext());
+            assertThrows(NoSuchElementException.class, reader::next);
+        } finally {
+            reader.close();
         }
 
-        assertFalse(reader.hasNext());
-        assertThrows(NoSuchElementException.class, reader::next);
-
-        reader.close();
         Mockito.verify(closeListener).onClose(reader);
-        assertEquals(Collections.emptySet(), allocatedBuffers);
+        assertEquals(Set.of(), allocatedBuffers);
     }
-
 }
