@@ -17,13 +17,9 @@
 
 package org.apache.kafka.trogdor.coordinator;
 
-import com.fasterxml.jackson.databind.node.JsonNodeFactory;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.fasterxml.jackson.databind.node.TextNode;
 import org.apache.kafka.common.utils.MockScheduler;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Scheduler;
-import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.test.TestUtils;
 import org.apache.kafka.trogdor.agent.AgentClient;
 import org.apache.kafka.trogdor.common.CapturingCommandRunner;
@@ -49,20 +45,24 @@ import org.apache.kafka.trogdor.rest.WorkerDone;
 import org.apache.kafka.trogdor.rest.WorkerRunning;
 import org.apache.kafka.trogdor.task.NoOpTaskSpec;
 import org.apache.kafka.trogdor.task.SampleTaskSpec;
+
+import com.fasterxml.jackson.databind.node.JsonNodeFactory;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.databind.node.TextNode;
+
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.ws.rs.NotFoundException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 
-import static java.util.concurrent.TimeUnit.MILLISECONDS;
+import jakarta.ws.rs.NotFoundException;
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -70,7 +70,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @Tag("integration")
-@Timeout(value = 120000, unit = MILLISECONDS)
+@Timeout(value = 240)
 public class CoordinatorTest {
 
     private static final Logger log = LoggerFactory.getLogger(CoordinatorTest.class);
@@ -332,7 +332,7 @@ public class CoordinatorTest {
         public ExpectedLines waitFor(final String nodeName,
                 final CapturingCommandRunner runner) throws InterruptedException {
             TestUtils.waitForCondition(() -> linesMatch(nodeName, runner.lines(nodeName)),
-                "failed to find the expected lines " + this.toString());
+                "failed to find the expected lines " + this);
             return this;
         }
 
@@ -362,14 +362,14 @@ public class CoordinatorTest {
 
         @Override
         public String toString() {
-            return Utils.join(expectedLines, ", ");
+            return String.join(", ", expectedLines);
         }
     }
 
     private static List<List<String>> createPartitionLists(String[][] array) {
         List<List<String>> list = new ArrayList<>();
         for (String[] a : array) {
-            list.add(Arrays.asList(a));
+            list.add(List.of(a));
         }
         return list;
     }
@@ -420,7 +420,7 @@ public class CoordinatorTest {
     }
 
     @Test
-    public void testTasksRequestMatches() throws Exception {
+    public void testTasksRequestMatches() {
         TasksRequest req1 = new TasksRequest(null, 0, 0, 0, 0, Optional.empty());
         assertTrue(req1.matches("foo1", -1, -1, TaskStateType.PENDING));
         assertTrue(req1.matches("bar1", 100, 200, TaskStateType.DONE));
@@ -485,7 +485,7 @@ public class CoordinatorTest {
             assertEquals(0, coordinatorClient.tasks(
                 new TasksRequest(null, 10, 0, 10, 0, Optional.empty())).tasks().size());
             TasksResponse resp1 = coordinatorClient.tasks(
-                new TasksRequest(Arrays.asList("foo", "baz"), 0, 0, 0, 0, Optional.empty()));
+                new TasksRequest(List.of("foo", "baz"), 0, 0, 0, 0, Optional.empty()));
             assertTrue(resp1.tasks().containsKey("foo"));
             assertFalse(resp1.tasks().containsKey("bar"));
             assertEquals(1, resp1.tasks().size());
@@ -716,4 +716,4 @@ public class CoordinatorTest {
                 waitFor(coordinatorClient);
         }
     }
-};
+}
